--- a/scenarios/04_Mages_And_Elves.cfg
+++ b/scenarios/04_Mages_And_Elves.cfg
@@ -1,47 +1,24 @@
 #textdomain wesnoth-The_Dark_Hordes
 
-# wmllint: local spelling Kaleon
-
 [scenario]
     id=04_Mages_And_Elves
     name= _ "Mages and Elves"
     next_scenario=05_Inside_The_Tower
     map_file=04_Mages_And_Elves.map
-    {TURNS 38 36 34}
+    {TDH_TURNS 38 34 30 26}
     {DEFAULT_SCHEDULE_DUSK}
 
-    {INTRO_AND_SCENARIO_MUSIC gameplay06.ogg loyalists.ogg}
+    {INTRO_AND_SCENARIO_MUSIC elf-land.ogg loyalists.ogg}
     {EXTRA_SCENARIO_MUSIC revelation.ogg}
     {EXTRA_SCENARIO_MUSIC legends_of_the_north.ogg}
-
-    [event]
-        name=prestart
-        [objectives]
-            [objective]
-                condition=win
-                description= _ "Move Gwiti to the Tower of Sorcery"
-            [/objective]
-
-            {ALTERNATIVE_OBJECTIVE_BONUS ( _ "Kill both enemy leaders")}
-
-            [objective]
-                condition=lose
-                description= _ "Death of Gwiti Ha’atel"
-            [/objective]
-
-            {TURNS_RUN_OUT}
-
-            [gold_carryover]
-                carryover_percentage=60
-            [/gold_carryover]
-        [/objectives]
-    [/event]
 
     {STORYTXT_MAGES_AND_ELVES}
     {TDH_TRACK {JOURNEY_04_NEW}}
 
-    {STARTING_VILLAGES 2 6}
-    {STARTING_VILLAGES 3 15}
+    {STARTING_VILLAGES_ALL 2}
+    {STARTING_VILLAGES 1 4}
+    {STARTING_VILLAGES 3 8}
+    {STARTING_VILLAGES 4 5}
 
     [side]
         type=Initiate
@@ -51,10 +28,10 @@
         side=1
         canrecruit=yes
         controller=human
-        {GOLD 160 140 120}
-        {INCOME 4 2 0}
+        {TDH_GOLD 180 160 140 120}
+        {TDH_INCOME 8 6 4 2}
         user_team_name= _ "team_name^Gwiti"
-        facing=nw
+        facing=se
         {FLAG_VARIANT undead}
     [/side]
 
@@ -71,22 +48,12 @@
             grouping=no
         [/ai]
 
-#ifdef HARD
-        recruit=Great Mage,Arch Mage,Red Mage,White Mage,Paladin,Shock Trooper
-#endif
-
-#ifdef NORMAL
-        recruit=Arch Mage,Red Mage,White Mage,Mage,Knight,Heavy Infantryman
-#endif
-
-#ifdef EASY
-        recruit=Red Mage,Mage,Horseman,Heavy Infantryman,Cavalryman
-#endif
-        {GOLD 120 140 220}
-        {INCOME 4 6 12}
+        recruit=Red Mage,White Mage,Mage,Swordsman,Spearman
+        {TDH_GOLD 60 80 100 120}
+        {TDH_INCOME 2 4 6 8}
         team_name=elves
         user_team_name= _ "team_name^Magi"
-        facing=se
+        facing=nw
         {FLAG_VARIANT loyalist}
     [/side]
 
@@ -103,30 +70,66 @@
             grouping=no
         [/ai]
 
-#ifdef HARD
-        recruit=Elvish Hero,Elvish Captain,Elvish Ranger,Elvish Marksman,Elvish Rider,Elvish Druid,Elvish Sorceress
-#endif
-
-#ifdef NORMAL
         recruit=Elvish Fighter,Elvish Hero,Elvish Archer,Elvish Marksman,Elvish Scout,Elvish Druid
-#endif
-
-#ifdef EASY
-        recruit=Elvish Fighter,Elvish Archer,Elvish Scout,Elvish Shaman
-#endif
-        {GOLD 60 80 140}
-        {INCOME 2 4 10}
+        {TDH_GOLD 20 40 60 80}
+        {TDH_INCOME 0 2 4 6}
         team_name=elves
         user_team_name= _ "team_name^Elves"
-        facing=se
+        facing=nw
         {FLAG_VARIANT wood-elvish}
     [/side]
+
+    [side]
+        type=Elvish Lord
+        id=Caraldur
+        name= _ "Caraldur"
+        profile=data/campaigns/Legend_of_Wesmere/images/portraits/galtrid.webp
+        side=4
+        canrecruit=yes
+
+        [ai]
+            aggression=0.8
+            caution=0.2
+            grouping=no
+        [/ai]
+
+        recruit=Elvish Fighter,Elvish Captain,Elvish Archer,Elvish Shaman
+        {TDH_GOLD 20 40 60 80}
+        {TDH_INCOME -2 0 2 4}
+        team_name=elves
+        user_team_name= _ "team_name^Elves"
+        facing=nw
+        {FLAG_VARIANT wood-elvish}
+    [/side]
+
+    [event]
+        name=prestart
+        [objectives]
+            [objective]
+                condition=win
+                description= _ "Move Gwiti to the Tower of Sorcery"
+            [/objective]
+
+            {ALTERNATIVE_OBJECTIVE_BONUS ( _ "Defeat all enemy leaders")}
+
+            [objective]
+                condition=lose
+                description= _ "Death of Gwiti Ha’atel"
+            [/objective]
+
+            {TURNS_RUN_OUT}
+
+            [gold_carryover]
+                carryover_percentage=60
+            [/gold_carryover]
+        [/objectives]
+    [/event]
 
     [event]
         name=start
         [message]
             speaker=narrator
-            message= _ "After sending the Dark Spirit away for his failure, Gwiti found some maps in the possession of the orc and realized that he was a short distance north of Wesnoth. Craving the power that was promised to him, he turned towards the Tower of Kaleon, where the greatest magi once studied."
+            message= _ "After sending Leganoth away for his failure, Gwiti found some maps in the possession of the orc and realized that he was a short distance north of Wesnoth. Craving the power that was promised to him, he turned towards the Tower of Kaleon, where the greatest magi once studied."
             image=wesnoth-icon.png
         [/message]
         [message]
@@ -134,7 +137,7 @@
             message= _ "At last, I have reached the road. Unless I am far off my course, I should find the Tower of Kaleon here, filled with the secrets of ancient magi. Soon they shall all be mine, and my power will be great enough to invade Wesnoth."
         [/message]
 
-        {HIGHLIGHT_IMAGE 15 3 scenery/trapdoor-closed.png ()}
+        {HIGHLIGHT_IMAGE 18 28 scenery/trapdoor-closed.png ()}
 
         [message]
             speaker=Quirind
@@ -147,10 +150,10 @@
         [/message]
         [message]
             speaker=Lessalin
-            message= _ "Quirind, know that you have the Elves at your back."
+            message= _ "Quirind, know that all the elves are with you according to an ancient treaty."
         [/message]
         [message]
-            speaker=Lessalin
+            speaker=Caraldur
             message= _ "Foul sorcerer of death, go far from this place or we shall send you to your own realm."
         [/message]
         [message]
@@ -180,7 +183,7 @@
         [/filter]
         [message]
             speaker=unit
-            message= _ "Argh! I have fallen, and the Tower lies stripped of its defenses!"
+            message= _ "Argh! I have fallen, and the tower lies stripped of its defenses!"
         [/message]
     [/event]
 
@@ -206,7 +209,7 @@
         name=time over
         [message]
             speaker=Quirind
-            message= _ "Ah ha ha ha! The tower’s protective spells are now in force, you cannot enter without mastering a magic equal to it."
+            message= _ "Ah ha ha ha! The tower’s protective spells are now in force, you cannot enter without mastering the magic equal to this."
         [/message]
     [/event]
 
@@ -224,6 +227,7 @@
         [message]
             speaker=Lessalin
             message= _ "A curse upon that foul dark sorcerer!"
+            scroll=no
         [/message]
         [endlevel]
             result=victory
