--- a/scenarios/05_Inside_The_Tower.cfg
+++ b/scenarios/05_Inside_The_Tower.cfg
@@ -4,39 +4,17 @@
     id=05_Inside_The_Tower
     name= _ "Inside the Tower"
     next_scenario=06_Crelanus_Book
+    victory_when_enemies_defeated=no
     map_file=05_Inside_The_Tower.map
-    {TURNS 58 52 46}
+    {TDH_TURNS 54 50 46 40}
     {UNDERGROUND}
 
-    {SCENARIO_MUSIC underground.ogg}
-    {EXTRA_SCENARIO_MUSIC the_deep_path.ogg}
-    {EXTRA_SCENARIO_MUSIC snowfall.ogg}
+    {SCENARIO_MUSIC snowfall.ogg}
+    {EXTRA_SCENARIO_MUSIC into_the_shadows.ogg}
 
-    [event]
-        name=prestart
-        [objectives]
-            [objective]
-                condition=win
-                description= _ "Find Crelanu’s Book"
-            [/objective]
-            [objective]
-                condition=lose
-                description= _ "Death of Gwiti Ha’atel"
-            [/objective]
+    {STARTING_VILLAGES_ALL 2}
 
-            {TURNS_RUN_OUT}
-
-            [gold_carryover]
-                bonus=no
-                carryover_percentage=80
-            [/gold_carryover]
-        [/objectives]
-    [/event]
-
-    disallow_recall=yes
-    victory_when_enemies_defeated=no
-
-    {PLACE_IMAGE items/book1.png 3 4}
+    {PLACE_IMAGE items/book1.png 28 4}
 
     [side]
         type=Initiate
@@ -56,10 +34,11 @@
     [/side]
 
     [side]
-        no_leader=yes
-        hidden=yes
+        type=Elder Mage
+        id=Krimitros
+        name= _ "Krimitros"
         side=2
-        user_team_name= _ "team_name^Magi"
+        canrecruit=yes
 
         [ai]
             aggression=1.0
@@ -67,45 +46,61 @@
             grouping=no
         [/ai]
 
+        recruit=Mage
+        {TDH_GOLD -10 0 10 20}
+        {TDH_INCOME -2 0 2 4}
+        user_team_name= _ "team_name^Magi"
+        facing=sw
         {FLAG_VARIANT loyalist}
 
-        {GENERIC_GUARD_UNIT 2 (Mage) 30 22}
-        {GENERIC_GUARD_UNIT 2 (Mage) 31 22}
-        {GENERIC_GUARD_UNIT 2 (Mage) 30 23}
-        {GENERIC_GUARD_UNIT 2 (Red Mage) 31 23}
+        {LOYAL_GUARD_UNIT 2 (Mage) 20 28}
+        {LOYAL_GUARD_UNIT 2 (Mage) 14 32}
 
-        [unit]
-            type=Elder Mage
-            x=9
-            y=6
-            id=Krimitros
-            name= _ "Krimitros"
-            random_traits=no
-            [modifications]
-                {TRAIT_LOYAL_HERO}
-            [/modifications]
-        [/unit]
+        {LOYAL_GUARD_UNIT 2 (Red Mage) 12 26}
+        {LOYAL_GUARD_UNIT 2 (Red Mage) 14 14}
 
-        {GENERIC_UNIT 2 (Red Mage) 16 10}
-        {GENERIC_UNIT 2 (Red Mage) 16 46}
-        {GENERIC_UNIT 2 (Red Mage) 16 9}
+        {LOYAL_GUARD_UNIT 2 (Mage) 12 16}
+        {LOYAL_GUARD_UNIT 2 (Mage) 12 30}
+        {LOYAL_GUARD_UNIT 2 (Mage) 20 24}
+        {LOYAL_GUARD_UNIT 2 (Mage) 19 12}
 
-        {GENERIC_UNIT 2 (Spearman) 21 28}
-        {GENERIC_UNIT 2 (Spearman) 12 39}
-        {GENERIC_UNIT 2 (Spearman) 18 30}
+        {LOYAL_GUARD_UNIT 2 (Mage) 7 28}
+        {LOYAL_GUARD_UNIT 2 (Mage) 9 12}
+        {LOYAL_GUARD_UNIT 2 (Mage) 4 10}
 
-        {GENERIC_UNIT 2 (Swordsman) 13 29}
-        {GENERIC_UNIT 2 (Swordsman) 27 45}
-
-        {GENERIC_UNIT 2 (Spearman) 23 15}
-        {GENERIC_UNIT 2 (Mage) 30 6}
+        {LOYAL_GUARD_UNIT 2 (Mage) 7 4}
+        {LOYAL_GUARD_UNIT 2 (Mage) 8 4}
+        {LOYAL_GUARD_UNIT 2 (Mage) 8 5}
     [/side]
+
+    [event]
+        name=prestart
+        [objectives]
+            [objective]
+                condition=win
+                description= _ "Find the Book of Crelanu"
+            [/objective]
+            [objective]
+                condition=lose
+                description= _ "Death of Gwiti Ha’atel"
+            [/objective]
+
+            {TURNS_RUN_OUT}
+
+            [gold_carryover]
+                bonus=no
+                carryover_percentage=80
+            [/gold_carryover]
+        [/objectives]
+
+        {MODIFY_UNIT (id=Krimitros) max_moves 0}
+    [/event]
 
     [event]
         name=start
         [message]
             speaker="Gwiti Ha'atel"
-            message= _ "If my memory serves, this tower should have three floors. I should be able to find the Book in a few hours...!"
+            message= _ "If my memory serves, this tower should have several rooms and floors. I should be able to find the book in not so long..."
         [/message]
     [/event]
     [event]
@@ -115,8 +110,8 @@
             id=Xakan
             name= _ "Xakan"
             unrenamable=yes
-            x=17
-            y=51
+            x=23
+            y=32
             side=1
             [modifications]
                 {TRAIT_LOYAL}
@@ -127,8 +122,8 @@
             id=Karae
             name= _ "Karae"
             unrenamable=yes
-            x=16
-            y=51
+            x=24
+            y=32
             side=1
             [modifications]
                 {TRAIT_LOYAL}
@@ -139,8 +134,8 @@
             id=Pezit
             name= _ "Pezit"
             unrenamable=yes
-            x=17
-            y=52
+            x=26
+            y=32
             side=1
             [modifications]
                 {TRAIT_LOYAL}
@@ -151,16 +146,17 @@
             id=Lagon
             name= _ "Lagon"
             unrenamable=yes
-            x=14
-            y=50
+            x=27
+            y=33
             side=1
             [modifications]
                 {TRAIT_LOYAL}
             [/modifications]
         [/unit]
 
-        {GENERIC_UNIT 1 (Skeleton) 20 53}
-        {GENERIC_UNIT 1 (Skeleton) 20 52}
+#ifndef HARD
+        {GENERIC_UNIT 1 (Skeleton) 26 33}
+        {GENERIC_UNIT 1 (Skeleton) 27 34}
 
         [modify_unit]
             [filter]
@@ -174,80 +170,13 @@
                 [/effect]
             [/object]
         [/modify_unit]
+#endif
 
         [message]
             speaker=Karae
-            message= _ "Hayaargghh! We have arrived! Command us, Master!"
+            message= _ "Hayaargghh! We have arrived! Command us, master!"
         [/message]
     [/event]
-
-    [event]
-        name=moveto
-        [filter]
-            x=21,23,11-34
-            y=35,35,30-34
-            side=1
-        [/filter]
-        [message]
-            speaker=unit
-            message= _ "Here’s he second floor! The mages can’t hide from us for long!"
-        [/message]
-    [/event]
-    [event]
-        name=moveto
-        [filter]
-            x=16-27
-            y=10-18
-            side=1
-        [/filter]
-        [message]
-            speaker="Gwiti Ha'atel"
-            message= _ "The third floor! Closer! Find the Book!"
-        [/message]
-    [/event]
-
-    [event]
-        name=moveto
-        [filter]
-            x=11
-            y=6
-            side=1
-        [/filter]
-        [message]
-            speaker=unit
-            message= _ "There’s a secret door here! This must be the library."
-        [/message]
-
-        [terrain]
-            x=10
-            y=6
-            terrain=Ds
-        [/terrain]
-        [redraw]
-            clear_shroud=yes
-        [/redraw]
-
-        [message]
-            speaker=Krimitros
-            message= _ "I will not allow the likes of you to lay eye upon the Book!"
-        [/message]
-    [/event]
-
-    {CHEST_OF_GOLD 30 48 ( _ "Well, well, well. Thirty-five pieces of gold were in this chest!") 35}
-    {CHEST_OF_GOLD 30 43 ( _ "Blast it, the chest is empty!") 0}
-    {CHEST_OF_GOLD 7  43 ( _ "Twenty pieces of gold is a welcome gift.") 20}
-    {CHEST_OF_GOLD 26 50 ( _ "I suppose thirty copper coins should not be scorned...") 30}
-    {CHEST_OF_GOLD 9  49 ( _ "The chest is empty save for a few trinkets. The magic has gone out of them.") 10}
-    {CHEST_OF_GOLD 10 39 ( _ "Gack! This chest contains holy water!") 0}
-    {CHEST_OF_GOLD 29 22 ( _ "Look at what the magi were guarding!") 60}
-    {CHEST_OF_GOLD 29 32 ( _ "Those magi had hidden away more than it seemed!") 114}
-    {CHEST_OF_GOLD 18 28 ( _ "Two dozen gold. Plundering this tower is fun!") 24}
-    {CHEST_OF_GOLD 13 28 ( _ "A pile of assorted coins is here!") 23}
-    {CHEST_OF_GOLD 17 25 ( _ "Haha, this chest holds scores of gold coins!") 55}
-
-    {ICEPOTION 32 22 object21_icepot}
-    {ICEPOTION 22 28 object22_icepot}
-    {ICEPOTION 16 46 object23_icepot}
 
     [event]
         name=last breath
@@ -256,12 +185,25 @@
         [/filter]
         [message]
             speaker=unit
-            message= _ "Nooo! Not this close to the book!"
+            message= _ "Noooo! Not this close to the book!"
         [/message]
         [endlevel]
             result=defeat
         [/endlevel]
     [/event]
+
+    {TREASURE_CHEST 21 25 ( _ "Thirty pieces of gold were in this chest!") 30}
+    {TREASURE_CHEST 13 32 ( _ "Twenty pieces of gold is welcome gift.") 20}
+    {TREASURE_CHEST 16 27 ( _ "I suppose thirty copper coins should not be scorned...") 30}
+    {TREASURE_CHEST 18 19 ( _ "Gack! This chest contains holy water!") 0}
+    {TREASURE_CHEST 13 10 ( _ "Look at what the magi were guarding!") 80}
+    {TREASURE_CHEST 14 22 ( _ "Two dozen gold. Plundering the tower is fun!") 24}
+    {TREASURE_CHEST 16 12 ( _ "A pile of assorted coins is here!") 20}
+    {TREASURE_CHEST 10 20 ( _ "This chest holds scores of gold coins!") 60}
+
+    {ICEPOTION 6 26 object21_icepot}
+    {ICEPOTION 5 12 object22_icepot}
+    {ICEPOTION 10 7 object23_icepot}
 
     [event]
         name=last breath
@@ -270,26 +212,46 @@
         [/filter]
         [message]
             speaker=unit
-            message= _ "No! The Book must never fall into the hands of a necromancer!"
+            message= _ "No! The book must never fall into the hands of the necromancer!"
         [/message]
     [/event]
     [event]
+        name=die
+        [filter]
+            id=Krimitros
+        [/filter]
+
+        {THUNDER (
+            [terrain]
+                x=25
+                y=6
+                terrain=Iwo
+            [/terrain]
+            [redraw]
+                clear_shroud=yes
+            [/redraw]
+        )}
+
+        [message]
+            speaker=second_unit
+            message= _ "His death opened the magical door! This must be the library."
+        [/message]
+    [/event]
+
+    [event]
         name=moveto
         [filter]
+            x,y=28,4
             id="Gwiti Ha'atel"
-            x=3
-            y=4
         [/filter]
         [message]
             speaker=unit
-            message= _ "This is not the tome Crelanu wrote...hmmm... but it contains its whereabouts!"
+            message= _ "This is not what Crelanu wrote... But it contains its whereabouts!"
         [/message]
         [message]
             speaker=Xakan
             message= _ "We’re done in here! Let’s go slay some more enemies."
         [/message]
-
-        # wmllint: local spelling Susanne
 
         [if]
             [have_unit]
@@ -314,12 +276,11 @@
                 [message]
                     caption= _ "Susanne"
                     speaker=narrator
-                    image="data/campaigns/Heir_To_The_Throne/images/units/human-princess.png~RC(magenta>red)"
+                    image=data/campaigns/Heir_To_The_Throne/images/units/human-princess.png~RC(magenta>red)
                     message= _ "Congratulations! All your revenants survived."
                 [/message]
             [/then]
         [/if]
-
         [endlevel]
             result=victory
             bonus=no
