--- a/scenarios/06_Crelanus_Book.cfg
+++ b/scenarios/06_Crelanus_Book.cfg
@@ -2,14 +2,88 @@
 
 [scenario]
     id=06_Crelanus_Book
-    name= _ "Crelanu’s Book"
+    name= _ "The Book of Crelanu"
     next_scenario=07_Confrontation
+    victory_when_enemies_defeated=no
     map_file=06_Crelanus_Book.map
-    {TURNS 30 26 22}
+    {TDH_TURNS 30 28 26 24}
     {DEFAULT_SCHEDULE_DUSK}
 
-    {INTRO_AND_SCENARIO_MUSIC the_dangerous_symphony.ogg wanderer.ogg}
-    {EXTRA_SCENARIO_MUSIC knolls.ogg}
+    {INTRO_AND_SCENARIO_MUSIC the_dangerous_symphony.ogg elvish-theme.ogg}
+    {EXTRA_SCENARIO_MUSIC battlecry.ogg}
+
+    {STORYTXT_CRELANUS_BOOK}
+    {TDH_TRACK {JOURNEY_06_NEW}}
+
+    {STARTING_VILLAGES_ALL 2}
+    {STARTING_VILLAGES 1 3}
+    {STARTING_VILLAGES 3 4}
+
+    [side]
+        type=Initiate
+        id="Gwiti Ha'atel"
+        name= _ "Gwiti Ha’atel"
+        unrenamable=yes
+        side=1
+        canrecruit=yes
+        controller=human
+        {TDH_GOLD 140 120 100 80}
+        {TDH_INCOME 6 4 2 0}
+        user_team_name= _ "team_name^Gwiti"
+        facing=sw
+        {FLAG_VARIANT undead}
+    [/side]
+
+    [side]
+        type=Elvish Hero
+        id=Urind
+        name= _ "Urind"
+        side=2
+        canrecruit=yes
+
+        [ai]
+            aggression=0.8
+            caution=0.2
+            recruitment_pattern=fighter,archer,healer
+        [/ai]
+
+        recruit=Elvish Fighter,Elvish Captain,Elvish Archer,Elvish Shaman
+        {TDH_GOLD 60 80 100 120}
+        {TDH_INCOME 4 6 8 10}
+        team_name=enemies
+        user_team_name= _ "team_name^Elves"
+        facing=sw
+        {FLAG_VARIANT wood-elvish}
+
+        {LOYAL_GUARD_UNIT 2 (Elvish Ranger) 7 5}
+        {LOYAL_GUARD_UNIT 2 (Elvish Ranger) 9 8}
+
+        {LOYAL_GUARD_UNIT 2 (Elvish Ranger) 13 15}
+        {LOYAL_GUARD_UNIT 2 (Elvish Ranger) 16 10}
+    [/side]
+
+    [side]
+        type=Orcish Warrior
+        id=Nagou
+        name= _ "Nagou"
+        profile=portraits/orcs/warlord.webp
+        side=3
+        canrecruit=yes
+
+        [ai]
+            aggression=0.8
+            caution=0.2
+            recruitment_pattern=fighter,scout,archer,fighter
+        [/ai]
+
+        recruit=Orcish Grunt,Wolf Rider,Orcish Archer,Troll Whelp
+        {TDH_GOLD 60 80 100 120}
+        {TDH_INCOME 4 6 8 10}
+        team_name=enemies
+        user_team_name= _ "team_name^Orcs"
+        facing=se
+        {FLAG_VARIANT6 ragged}
+    [/side]
 
     [event]
         name=prestart
@@ -26,115 +100,22 @@
             {TURNS_RUN_OUT}
 
             [gold_carryover]
-                bonus=no
+                bonus=yes
                 carryover_percentage=60
             [/gold_carryover]
         [/objectives]
     [/event]
 
-    disallow_recall=yes
-    victory_when_enemies_defeated=no
-
-    {STORYTXT_CRELANUS_BOOK}
-    {TDH_TRACK {JOURNEY_06_NEW}}
-
-    {STARTING_VILLAGES 2 7}
-    {STARTING_VILLAGES 3 8}
-
-    [side]
-        type=Initiate
-        id="Gwiti Ha'atel"
-        name= _ "Gwiti Ha’atel"
-        unrenamable=yes
-        side=1
-        canrecruit=yes
-        controller=human
-        {GOLD 100 80 60}
-        {INCOME 4 2 0}
-        user_team_name= _ "team_name^Gwiti"
-        facing=nw
-        {FLAG_VARIANT undead}
-    [/side]
-
-    {RECRUIT_UNIT_VARIATIONS 1 "Walking Corpse" none,none,none,mounted,bat}
-
-    [side]
-        type=Elvish Hero
-        id=Urind
-        name= _ "Urind"
-        side=2
-        canrecruit=yes
-
-        [ai]
-            aggression=1.0
-            caution=0.0
-            leader_value=2
-        [/ai]
-
-#ifdef HARD
-        recruit=Elvish Fighter,Elvish Ranger,Elvish Marksman,Elvish Rider,Elvish Shaman,Elvish Sorceress
-#else
-        recruit=Elvish Fighter,Elvish Archer,Elvish Scout,Elvish Shaman
-#endif
-        {GOLD 120 140 220}
-        {INCOME 2 4 8}
-        team_name=enemies
-        user_team_name= _ "team_name^Elves"
-        facing=sw
-        {FLAG_VARIANT wood-elvish}
-    [/side]
-
-    [side]
-        type=Orcish Warrior
-        id=Nagou
-        name= _ "Nagou"
-        profile=portraits/orcs/warlord.webp
-        side=3
-        canrecruit=yes
-
-        [ai]
-            aggression=1.0
-            caution=0.0
-            leader_value=2
-        [/ai]
-
-#ifdef HARD
-        recruit= "Orcish Archer,Orcish Grunt,Wolf Rider,Orcish Assassin,Orcish Crossbowman,Orcish Slayer,Troll"
-#else
-        recruit= "Orcish Archer,Orcish Grunt,Troll Whelp,Wolf Rider,Orcish Assassin"
-#endif
-        {GOLD 120 140 220}
-        {INCOME 2 4 8}
-        team_name=enemies
-        user_team_name= _ "team_name^Orcs"
-        facing=se
-        {FLAG_VARIANT6 ragged}
-    [/side]
-
-    [side]
-        no_leader=yes
-        hidden=yes
-        side=4
-        controller=null
-        team_name=enemies
-        user_team_name= _ "team_name^Wesnothians"
-        {FLAG_VARIANT loyalist}
-    [/side]
-
     [event]
         name=start
         [message]
             speaker=narrator
-            message= _ "Time marched on, and so did Gwiti. He was nearing the place where the dreadful tome of Crelanu was hidden."
+            message= _ "Time marched on, and so did Gwiti. He was nearing the place where the dreadful tome was hidden."
             image=wesnoth-icon.png
         [/message]
         [message]
-            speaker="Gwiti Ha'atel"
-            message= _ "I feel that it must be close. Could it be in that swamp?"
-        [/message]
-        [message]
             speaker=narrator
-            message= _ "But the ancient magi had done their job well. The book had been hidden in a grove over which Elves and Orcs had waged war for many years, and any to approach would suffer their combined wrath..."
+            message= _ "But the ancient magi had done their job well. The book had been hidden in the grove over which elves and orcs had waged war for many years, and any to approach would suffer their combined wrath."
             image=wesnoth-icon.png
         [/message]
         [message]
@@ -143,7 +124,7 @@
         [/message]
         [message]
             speaker=Nagou
-            message= _ "Blast it! However did the elves get a dark sorcerer to march with them?"
+            message= _ "Blast it! However did the elves get the necromancer to march with them?"
         [/message]
         [message]
             speaker="Gwiti Ha'atel"
@@ -155,56 +136,56 @@
         [/message]
         [message]
             speaker=Urind
-            message= _ "Very well. We have hated you Orcs for centuries, but the Undead are a danger to all that live."
+            message= _ "Very well. We have hated you orcs for centuries, but the undead are dangerous to all that live."
         [/message]
-
-        [set_recruit]
-            side=1
-            recruit=Walking Corpse
-        [/set_recruit]
-    [/event]
-
-    [event]
-        name=moveto
-        [filter]
-            x=7
-            y=23
-            side=1
-        [/filter]
-
         [message]
-            speaker="Gwiti Ha'atel"
-            message= _ "The book is not here, but these swamps contain enough corpses to suit my purposes."
+            speaker=Urind
+            message= _ "Soldiers, the enemies we must destroy are the undead. To arms!"
         [/message]
 
-        [terrain]
-            x=4,6,10
-            y=20,20,20
-            terrain=Chs
-        [/terrain]
-        [terrain]
-            x=3-10,3-10,3-6
-            y=21,22,23
-            terrain=Chs
-        [/terrain]
-        [terrain]
-            x=8-11,4-6,9-11
-            y=23,24,24
-            terrain=Chs
-        [/terrain]
-        [terrain]
-            x=5-6,9
-            y=25,25
-            terrain=Chs
-        [/terrain]
+        [sound]
+            name=magic-faeriefire.ogg
+        [/sound]
 
-        # wmllint: local spelling ctrl-alt-r
+        [move_unit_fake]
+            type=Elvish Ranger
+            side=2
+            x=24,23
+            y=2,2
+        [/move_unit_fake]
 
-        [message]
-            speaker=narrator
-            message= _ "Use ctrl-alt-r to repeat your last recruit."
-            image=wesnoth-icon.png
-        [/message]
+        [sound]
+            name=magic-faeriefire.ogg
+        [/sound]
+
+        [move_unit_fake]
+            type=Elvish Ranger
+            side=2
+            x=24,23
+            y=3,3
+        [/move_unit_fake]
+
+        [sound]
+            name=magic-faeriefire.ogg
+        [/sound]
+
+        [move_unit_fake]
+            type=Elvish Ranger
+            side=2
+            x=26,27
+            y=2,3
+        [/move_unit_fake]
+
+        [sound]
+            name=magic-faeriefire.ogg
+        [/sound]
+
+        [move_unit_fake]
+            type=Elvish Ranger
+            side=2
+            x=26,27
+            y=3,4
+        [/move_unit_fake]
     [/event]
 
     [event]
@@ -228,7 +209,7 @@
         [/filter]
         [message]
             speaker=unit
-            message= _ "I die a terrible death... not knowing why."
+            message= _ "I die an awful death... not knowing why."
         [/message]
     [/event]
 
@@ -246,57 +227,18 @@
     [event]
         name=moveto
         [filter]
-            x=30
+            x=10
             y=2
             id="Gwiti Ha'atel"
         [/filter]
         [message]
             speaker="Gwiti Ha'atel"
-            message= _ "At last! This is it! Now I must laugh crazily as a true villain always does!"
+            message= _ "At last! This is it! Now I must laugh crazily as true villains always do!"
         [/message]
         [endlevel]
             result=victory
-            bonus=no
+            bonus=yes
             {NEW_GOLD_CARRYOVER 60}
         [/endlevel]
-    [/event]
-    [event]
-        name=victory
-        [allow_recruit]
-            side=1
-            type=Vampire Bat,Ghost,Dark Adept,Skeleton,Skeleton Archer
-        [/allow_recruit]
-
-        [unit]
-            type=Cavalryman
-            id=Advance Scout
-            generate_name=yes
-            random_traits=yes
-            x=36
-            y=3
-            facing=sw
-            side=4
-        [/unit]
-
-        [scroll_to_unit]
-            id=Advance Scout
-        [/scroll_to_unit]
-
-        [message]
-            speaker=Advance Scout
-            message= _ "My lord, your suspicions were correct. There is indeed a dark sorcerer in this part of the country!"
-        [/message]
-
-        [sound]
-            name=horse-canter.wav
-        [/sound]
-
-        [kill]
-            id=Advance Scout
-            fire_event=no
-            animate=no
-        [/kill]
-
-        [redraw][/redraw]
     [/event]
 [/scenario]
