--- a/scenarios/07_Confrontation.cfg
+++ b/scenarios/07_Confrontation.cfg
@@ -1,18 +1,83 @@
 #textdomain wesnoth-The_Dark_Hordes
 
-# wmllint: local spelling Aretu Erzen
-
 [scenario]
     id=07_Confrontation
     name= _ "Confrontation"
     next_scenario=08_Underground_Pool
+    victory_when_enemies_defeated=no
     map_file=07_Confrontation.map
-    {TURNS 32 30 28}
+    {TDH_TURNS 30 26 22 18}
     {DEFAULT_SCHEDULE_DAWN}
 
-    {INTRO_AND_SCENARIO_MUSIC gameplay06.ogg revelation.ogg}
-    {EXTRA_SCENARIO_MUSIC wanderer.ogg}
-    {EXTRA_SCENARIO_MUSIC nunc_dimittis.ogg}
+    {STORYTXT_CONFRONTATION}
+    {TDH_TRACK {JOURNEY_07_NEW}}
+
+    {STARTING_VILLAGES_ALL 2}
+
+    [side]
+        type=Initiate
+        id="Gwiti Ha'atel"
+        name= _ "Gwiti Ha’atel"
+        unrenamable=yes
+        side=1
+        canrecruit=yes
+        controller=human
+        {TDH_GOLD 180 160 140 120}
+        {TDH_INCOME 8 6 4 2}
+        user_team_name= _ "team_name^Gwiti"
+        facing=sw
+        {FLAG_VARIANT undead}
+    [/side]
+
+    [side]
+        type=General
+        id=Leonard
+        name= _ "Leonard"
+        side=2
+        canrecruit=yes
+
+        [ai]
+            aggression=1.0
+            caution=0.2
+            leader_value=4
+        [/ai]
+
+        recruit=Mage,Cavalryman,Fencer,Bowman,Spearman
+        {TDH_GOLD 150 200 250 300}
+        {TDH_INCOME 10 15 20 25}
+        team_name=mages
+        user_team_name= _ "team_name^Wesnothians"
+        facing=se
+        {FLAG_VARIANT loyalist}
+    [/side]
+
+    [side]
+        no_leader=yes
+        hidden=yes
+        side=3
+
+        [ai]
+            passive_leader=yes
+            recruitment_pattern=healer,fighter,fighter,healer,fighter
+            aggression=1.0
+            caution=0.2
+
+            [goal]
+                name=target
+                [criteria]
+                    id="Gwiti Ha'atel"
+                [/criteria]
+                value=4.0
+            [/goal]
+        [/ai]
+
+        recruit=White Mage,Paladin
+        gold=1600
+        income=-2
+        team_name=mages
+        user_team_name= _ "team_name^Wesnothians"
+        {FLAG_VARIANT loyalist}
+    [/side]
 
     [event]
         name=prestart
@@ -35,77 +100,8 @@
         [/objectives]
     [/event]
 
-    victory_when_enemies_defeated=no
-
-    {TDH_TRACK {JOURNEY_07_NEW}}
-
-    {STARTING_VILLAGES_ALL 2}
-    {STARTING_VILLAGES 1 3}
-
-    [side]
-        type=Initiate
-        id="Gwiti Ha'atel"
-        name= _ "Gwiti Ha’atel"
-        unrenamable=yes
-        side=1
-        canrecruit=yes
-        controller=human
-        {GOLD 180 160 140}
-        {INCOME 6 4 2}
-        user_team_name= _ "team_name^Gwiti"
-        facing=se
-        {FLAG_VARIANT undead}
-    [/side]
-
-    [side]
-        type=General
-        id=Leonard
-        name= _ "Leonard"
-        side=2
-        canrecruit=yes
-
-        [ai]
-            aggression=1.0
-            caution=0.2
-            leader_value=4
-        [/ai]
-
-        recruit=Mage,Cavalryman,Fencer,Bowman,Spearman
-        {GOLD 200 300 400}
-        {INCOME 10 20 30}
-        team_name=mages
-        user_team_name= _ "team_name^Wesnothians"
-        facing=nw
-        {FLAG_VARIANT loyalist}
-    [/side]
-
-    [side]
-        no_leader=yes
-        hidden=yes
-        side=3
-
-        [ai]
-            passive_leader=yes
-            recruitment_pattern=healer,fighter,fighter,healer,fighter
-            aggression=0.8
-            caution=0.2
-
-            [goal]
-                name=target
-                [criteria]
-                    id="Gwiti Ha'atel"
-                [/criteria]
-                value=6.0
-            [/goal]
-        [/ai]
-
-        recruit=White Mage,Paladin
-        gold=1700
-        income=-2
-        team_name=mages
-        user_team_name= _ "team_name^Wesnothians"
-        {FLAG_VARIANT loyalist}
-    [/side]
+    {CONTINUOUS_SOUND_SOURCE campfire_enemy 14 17 (ambient/campfire.ogg)}
+    {SOUND_SOURCE_RANGE 1 8}
 
     [event]
         name=start
@@ -128,13 +124,15 @@
         [/message]
         [message]
             speaker=narrator
-            message= _ "In truth, Leonard’s army was unprepared and under-equipped, and he had neglected to send word. Luckily, behind him came one whose name was a bane to the undead: Lord Aretu. Gwiti knew that even if he defeated Leonard, his best hope was now to flee into the mountains."
+            message= _ "In truth, Leonard’s army was unprepared and under-equipped, and he had neglected to send word. Luckily, behind him came one whose name was the bane to the undead: Lord Aretu. Gwiti knew that even if he defeated Leonard, his best hope was now to flee into the mountains."
             image=wesnoth-icon.png
         [/message]
         [message]
             speaker=Leonard
             message= _ "I shall slay you myself!"
         [/message]
+
+        {APPEND_MUSIC revelation.ogg}
     [/event]
 
     [event]
@@ -144,7 +142,7 @@
         [/filter]
         [message]
             speaker=unit
-            message= _ "So this is death... the cold, and black void..."
+            message= _ "So this is death... the cold and dark void..."
         [/message]
         [endlevel]
             result=defeat
@@ -158,7 +156,7 @@
         [/filter]
         [message]
             speaker=unit
-            message= _ "No! This cannot be true! My king, I have failed..."
+            message= _ "No! This cannot be true! My lord, I have failed..."
         [/message]
 
         [kill]
@@ -166,6 +164,11 @@
             fire_event=no
             animate=yes
         [/kill]
+
+        [replace_map]
+            map_file=07b_Confrontation.map
+            expand,shrink=yes,yes
+        [/replace_map]
 
         [sound]
             name=horse-canter.wav
@@ -175,34 +178,40 @@
             type=Paladin
             id=Lord Aretu
             name= _ "Lord Aretu"
-            x,y=52,40
+            x,y=5,37
             facing=nw
             side=3
             canrecruit=yes
         [/unit]
+
         [modify_side]
             side=3
             hidden=no
             income=60
         [/modify_side]
 
+        {CAPTURE_VILLAGE 3 7 34}
+        {CAPTURE_VILLAGE 3 1 38}
+        {CAPTURE_VILLAGE 3 9 37}
+
         [message]
             speaker=Lord Aretu
-            message= _ "Leonard is dead? Oh, what a sad day. Come, men, let us destroy those undead!"
+            message= _ "Leonard is dead? Oh, what sad day. Come, men, let us destroy those undead!"
         [/message]
         [message]
             speaker="Gwiti Ha'atel"
             message= _ "Only one way lies open now. I must flee where his horses cannot go: the sharp peaks and bottomless caves."
         [/message]
 
-        {HIGHLIGHT_IMAGE 56 1 items/gohere.png ()}
+        {HIGHLIGHT_IMAGE 9 1 items/gohere.png ()}
 
         [scroll_to_unit]
             id="Gwiti Ha'atel"
         [/scroll_to_unit]
 
+        {APPEND_MUSIC tide_of_battle.ogg}
+
         [objectives]
-            summary= _ "After the death of Leonard, Gwiti must now achieve a new objective"
             [objective]
                 condition=win
                 description= _ "Move Gwiti to the end of the mountain pass"
@@ -226,7 +235,7 @@
         first_time_only=no
         [filter]
             [filter_location]
-                terrain=*^Ii
+                terrain=Ch
             [/filter_location]
             side=1
         [/filter]
@@ -234,16 +243,17 @@
             speaker=Lord Aretu
             message= _ "Return to your master, dark fiend!"
         [/message]
+
         {THUNDER (
             [teleport]
                 [filter]
                     [filter_location]
-                        terrain=*^Ii
+                        terrain=Ch
                     [/filter_location]
                     side=1
                 [/filter]
-                x=9
-                y=14
+                x=16
+                y=32
             [/teleport]
         )}
     [/event]
@@ -252,7 +262,7 @@
         name=moveto
         first_time_only=no
         [filter]
-            x=56
+            x=9
             y=1
             id="Gwiti Ha'atel"
         [/filter]
@@ -264,7 +274,7 @@
             [then]
                 [message]
                     speaker=Leonard
-                    message= _ "Haha, it was a mistake of you to flee there! The pass is blocked, and my troops will slay you now!"
+                    message= _ "Haha, it was your mistake to flee there! The pass is blocked, and my troops will slay you now!"
                 [/message]
             [/then]
             [else]
@@ -280,21 +290,23 @@
             [/else]
         [/if]
     [/event]
+
     [event]
         name=victory
+
         [unit]
             type=Orcish Warrior
             id=Tanar
             name= _ "Tanar"
             profile=portraits/tanar.png
             unrenamable=yes
-            x=57
-            y=2
+            x=10
+            y=1
             side=1
             facing=sw
             [modifications]
                 {TRAIT_LOYAL_HERO}
-                {TRAIT_STRONG}
+                {TRAIT_QUICK}
             [/modifications]
         [/unit]
 
@@ -304,11 +316,11 @@
         [/message]
         [message]
             speaker="Gwiti Ha'atel"
-            message= _ "Who are you? If you are a foe of the Dwarves, I might consider you an ally."
+            message= _ "Who are you? If you are the foe of the dwarves, I might consider you an ally."
         [/message]
         [message]
             speaker=Tanar
-            message= _ "I am Tanar, lord of an orcish clan that dwelt here! My people were driven out by the dwarves. All families count several dead. Please, let us march with you, for only a chance to strike back at the evil Dwarves!"
+            message= _ "I am Tanar, lord of an orcish clan that dwelt here! My people were driven out by the dwarves. All families count several dead. Please, let us march with you, for only the chance to strike back at the evil dwarves!"
         [/message]
         [message]
             speaker="Gwiti Ha'atel"
@@ -316,7 +328,7 @@
         [/message]
         [message]
             speaker=Tanar
-            message= _ "Thank you, my new Lord! Never had I thought I would see the day when my people were glad to march alongside skeletons and ghosts."
+            message= _ "Thank you, my new lord! Never had I thought I would see the day when my people were glad to march alongside skeletons and ghosts."
         [/message]
 
         [allow_recruit]
