--- a/scenarios/08_Underground_Pool.cfg
+++ b/scenarios/08_Underground_Pool.cfg
@@ -4,16 +4,103 @@
     id=08_Underground_Pool
     name= _ "Underground Pool"
     next_scenario=09_Underground_River
+    victory_when_enemies_defeated=no
     map_file=08_Underground_Pool.map
-    {TURNS 42 38 36}
+    {TDH_TURNS 46 42 38 34}
     {UNDERGROUND}
 
     {INTRO_AND_SCENARIO_MUSIC revelation.ogg underground.ogg}
     {EXTRA_SCENARIO_MUSIC nunc_dimittis.ogg}
     {EXTRA_SCENARIO_MUSIC the_deep_path.ogg}
 
+    {STORYTXT_UNDERGROUND_POOL}
+    {TDH_TRACK {JOURNEY_08_NEW}}
+
+    {STARTING_VILLAGES_ALL 3}
+    {STARTING_VILLAGES 2 3}
+
+    [side]
+        type=Initiate
+        id="Gwiti Ha'atel"
+        name= _ "Gwiti Ha’atel"
+        unrenamable=yes
+        side=1
+        canrecruit=yes
+        controller=human
+        {TDH_GOLD 160 140 120 100}
+        {TDH_INCOME 6 4 2 0}
+        user_team_name= _ "team_name^Gwiti"
+        facing=nw
+        shroud=yes
+        {FLAG_VARIANT undead}
+    [/side]
+
+    [side]
+        type=Dwarvish Berserker
+        id=Peluthlos
+        name= _ "Peluthlos"
+        side=2
+        canrecruit=yes
+
+        [ai]
+            aggression=1.0
+            caution=-0.2
+            grouping=no
+        [/ai]
+
+        recruit=Dwarvish Ulfserker
+        {TDH_GOLD 0 10 20 30}
+        {TDH_INCOME 2 4 6 8}
+        team_name=enemies
+        user_team_name= _ "team_name^Dwarves"
+        facing=se
+        {FLAG_VARIANT knalgan}
+
+        {LOYAL_GUARD_UNIT 2 (Dwarvish Ulfserker) 15 7}
+        {LOYAL_GUARD_UNIT 2 (Dwarvish Ulfserker) 18 8}
+        {LOYAL_GUARD_UNIT 2 (Giant Spider) 6 2}
+    [/side]
+
+    [side]
+        type=Dwarvish Lord
+        id=Geldar
+        name= _ "Geldar"
+        side=3
+        canrecruit=yes
+
+        [ai]
+            aggression=1.0
+            caution=-0.2
+            leader_value=2
+        [/ai]
+
+        recruit=Dwarvish Fighter,Dwarvish Thunderer
+        {TDH_GOLD -10 0 10 20}
+        {TDH_INCOME 0 2 4 6}
+        team_name=enemies
+        user_team_name= _ "team_name^Dwarves"
+        facing=se
+        {FLAG_VARIANT knalgan}
+
+        {LOYAL_GUARD_UNIT 3 (Dwarvish Steelclad) 15 17}
+        {LOYAL_GUARD_UNIT 3 (Dwarvish Steelclad) 23 10}
+
+        {LOYAL_GUARD_UNIT 3 (Dwarvish Fighter) 26 16}
+        {LOYAL_GUARD_UNIT 3 (Dwarvish Fighter) 18 17}
+        {LOYAL_GUARD_UNIT 3 (Dwarvish Fighter) 10 12}
+        {LOYAL_GUARD_UNIT 3 (Dwarvish Fighter) 25 12}
+        {LOYAL_GUARD_UNIT 3 (Dwarvish Fighter) 26 12}
+        {LOYAL_GUARD_UNIT 3 (Dwarvish Fighter) 18 10}
+    [/side]
+
     [event]
         name=prestart
+        [recall]
+            id=Tanar
+            x,y=27,19
+            facing=nw
+        [/recall]
+
         [objectives]
             [objective]
                 condition=win
@@ -37,109 +124,18 @@
         [/objectives]
     [/event]
 
-    victory_when_enemies_defeated=no
-
-    {STORYTXT_UNDERGROUND_POOL}
-    {TDH_TRACK {JOURNEY_08_NEW}}
-
-    [side]
-        type=Demilich
-        id="Gwiti Ha'atel"
-        name= _ "Gwiti Ha’atel"
-        unrenamable=yes
-        side=1
-        canrecruit=yes
-        controller=human
-        {GOLD 120 100 80}
-        {INCOME 4 2 0}
-        user_team_name= _ "team_name^Gwiti"
-        facing=nw
-        shroud=yes
-        {FLAG_VARIANT undead}
-    [/side]
-
-    [side]
-        type=Dwarvish Berserker
-        id=Peluthlos
-        name= _ "Peluthlos"
-        side=2
-        canrecruit=yes
-
-        [ai]
-            aggression=1.0
-            caution=-0.2
-            grouping=no
-        [/ai]
-
-        recruit=Dwarvish Ulfserker
-        {GOLD 0 4 8}
-        {INCOME 0 2 4}
-        team_name=enemies
-        user_team_name= _ "team_name^Dwarves"
-        facing=se
-        {FLAG_VARIANT knalgan}
-
-        {LOYAL_UNIT 2 (Dwarvish Ulfserker) 3 16}
-        {LOYAL_UNIT 2 (Dwarvish Ulfserker) 13 5}
-        {LOYAL_UNIT 2 (Dwarvish Ulfserker) 10 2}
-        {LOYAL_GUARD_UNIT 2 (Giant Spider) 10 3}
-    [/side]
-
-    [side]
-        type=Dwarvish Lord
-        id=Geldar
-        name= _ "Geldar"
-        side=3
-        canrecruit=yes
-
-        [ai]
-            aggression=1.0
-            caution=-0.2
-            leader_value=2
-        [/ai]
-
-        recruit=Dwarvish Fighter,Dwarvish Thunderer
-        {GOLD 0 4 8}
-        {INCOME 0 2 4}
-        team_name=enemies
-        user_team_name= _ "team_name^Dwarves"
-        facing=se
-        {FLAG_VARIANT knalgan}
-
-#ifdef HARD
-        {LOYAL_GUARD_UNIT 3 (Dwarvish Steelclad) 18 14}
-        {LOYAL_GUARD_UNIT 3 (Dwarvish Steelclad) 16 14}
-        {LOYAL_GUARD_UNIT 3 (Dwarvish Steelclad)  9 12}
-#endif
-        {LOYAL_GUARD_UNIT 3 (Dwarvish Fighter) 19 19}
-        {LOYAL_GUARD_UNIT 3 (Dwarvish Fighter) 16 16}
-        {LOYAL_GUARD_UNIT 3 (Dwarvish Fighter) 14 15}
-        {LOYAL_GUARD_UNIT 3 (Dwarvish Fighter) 14 18}
-        {LOYAL_GUARD_UNIT 3 (Dwarvish Fighter)  9 17}
-        {LOYAL_GUARD_UNIT 3 (Dwarvish Fighter) 10 18}
-    [/side]
-
-    [event]
-        name=prestart
-        [recall]
-            id=Tanar
-            x,y=11,20
-            facing=nw
-        [/recall]
-    [/event]
-
     [event]
         name=victory
         [message]
             speaker=Tanar
-            message= _ "We have come to a flooded part of the cave. If we forge ahead, the Dwarves should be delayed quite a bit."
+            message= _ "We have come to the flooded part of the cave. If we forge ahead, the dwarves should be delayed considerably."
         [/message]
 
         {THUNDER ()}
 
         [message]
             speaker=Tanar
-            message= _ "ARGH! What was that?"
+            message= _ "Argh! What was that?"
         [/message]
         [message]
             speaker="Gwiti Ha'atel"
@@ -147,7 +143,7 @@
         [/message]
         [message]
             speaker=Tanar
-            message= _ "Nay, Lord. These passages were flooded higher last time I was here. The Dwarves did not delve here, and we shunned the nameless dread we felt."
+            message= _ "Nay, lord. These passages were flooded higher last time I was here. The dwarves did not delve here, and we shunned the nameless dread we felt."
         [/message]
         [message]
             speaker="Gwiti Ha'atel"
@@ -159,23 +155,23 @@
         name=start
         [message]
             speaker="Gwiti Ha'atel"
-            message= _ "The Dwarves are still in these caves!"
+            message= _ "The dwarves are still in these caves!"
         [/message]
         [message]
             speaker=Tanar
-            message= _ "Aye! They drove us out, and left a guard here to occupy us."
+            message= _ "Aye! They drove us out, and left guards here to occupy us."
         [/message]
         [message]
             speaker="Gwiti Ha'atel"
-            message= _ "Then we shall slay them. I have never had Dwarves rise to join my ranks. He, he, he, he..."
+            message= _ "Then we shall slay them. I have never had dwarves rise to join my ranks. He, he, he, he..."
         [/message]
     [/event]
 
     [event]
         name=moveto
         [filter]
-            y=1
-            x=8-12
+            y=1,1
+            x=5,7
             [and]
                 id=Tanar
                 [or]
@@ -190,7 +186,7 @@
         [/endlevel]
     [/event]
 
-    {CHEST_OF_GOLD 1 8 ( _ "The Hoard of the Dwarves! Three hundred pieces of gold at least!") 300}
+    {TREASURE_CHEST 7 16 ( _ "The hoard of the dwarves! Three hundred pieces of gold at least!") 300}
 
     [event]
         name=last breath
@@ -205,6 +201,7 @@
             result=defeat
         [/endlevel]
     [/event]
+
     [event]
         name=last breath
         [filter]
