--- a/scenarios/09x_Inter.cfg
+++ b/scenarios/09x_Inter.cfg
@@ -4,12 +4,17 @@
     id=09x_Inter
     name= _ "The Dark Hordes"
     theme=Cutscene_Minimal
-    {NO_MAP_DATA}
+    victory_when_enemies_defeated=no
+    map_file=09x_Inter.map
+    turns=unlimited
+    {DEEP_UNDERGROUND}
 
     {STORYTXT_CAMPAIGN_INTERLUDE}
 
+    {STARTING_VILLAGES_ALL 1}
+
     [side]
-        type=Demilich
+        type=Initiate
         id="Gwiti Ha'atel"
         name= _ "Gwiti Ha’atel"
         unrenamable=yes
@@ -17,29 +22,230 @@
         canrecruit=yes
         controller=human
         gold=0
+        village_gold=0
         income=-2
         user_team_name= _ "team_name^Gwiti"
+        facing=nw
         shroud=yes
         {FLAG_VARIANT undead}
     [/side]
 
     [event]
         name=prestart
-        {PUT_TO_RECALL_LIST (id="Gwiti Ha'atel")}
+        [store_unit]
+            [filter]
+                id="Gwiti Ha'atel"
+            [/filter]
+            variable=gwiti_store
+            kill=no
+        [/store_unit]
+
+        [recall]
+            id=Tanar
+            x,y=23,4
+            facing=nw
+        [/recall]
+    [/event]
+
+    [event]
+        name=start
+        [message]
+            speaker="Gwiti Ha'atel"
+            message= _ "Well... Now is the time to be the first to use the knowledge of Crelanu. It has taken me so long to master the basics of this fresh and vast lore. I may have been here for almost one year already."
+        [/message]
+
+        {DELAY 500}
+
+        [message]
+            speaker="Gwiti Ha'atel"
+            message= _ "Leave here until I have completed the ritual."
+        [/message]
+        [message]
+            speaker=Tanar
+            message= _ "I understood, my lord."
+        [/message]
+
+        {PUT_TO_RECALL_LIST (id=Tanar)}
+
+        [message]
+            speaker="Gwiti Ha'atel"
+            message= _ "..."
+        [/message]
+
+        {DELAY 1000}
+
+        [animate_unit]
+            [filter]
+                id="Gwiti Ha'atel"
+            [/filter]
+            flag=attack
+            hits=yes
+            [primary_attack]
+                range=ranged
+            [/primary_attack]
+        [/animate_unit]
+
+        {GENERIC_UNIT 1 (Wraith) 23 3} {ANIMATE}
+        {GENERIC_UNIT 1 (Shadow) 25 4} {ANIMATE}
+
+        [message]
+            speaker="Gwiti Ha'atel"
+            message= _ "Now let me receive the embrace of everlasting death... Let me cast off my unwanted mortal flesh and connect my soul to the darkness..."
+            sound=wail-long.wav
+        [/message]
+
+        {DELAY 500}
+
+        [animate_unit]
+            [filter]
+                type=Wraith
+            [/filter]
+            flag=attack
+            hits=yes
+            [primary_attack]
+                range=melee
+            [/primary_attack]
+
+            [facing]
+                [filter]
+                    id="Gwiti Ha'atel"
+                [/filter]
+            [/facing]
+
+            [animate]
+                [filter]
+                    id="Gwiti Ha'atel"
+                [/filter]
+                flag=defend
+                hits=no
+
+                [facing]
+                    [filter]
+                        type=Wraith
+                    [/filter]
+                [/facing]
+            [/animate]
+        [/animate_unit]
+
+        {DELAY 250}
+
+        [animate_unit]
+            [filter]
+                type=Shadow
+            [/filter]
+            flag=attack
+            hits=yes
+            [primary_attack]
+                range=melee
+            [/primary_attack]
+
+            [facing]
+                [filter]
+                    id="Gwiti Ha'atel"
+                [/filter]
+            [/facing]
+
+            [animate]
+                [filter]
+                    id="Gwiti Ha'atel"
+                [/filter]
+                flag=defend
+                hits=no
+
+                [facing]
+                    [filter]
+                        type=Shadow
+                    [/filter]
+                [/facing]
+            [/animate]
+        [/animate_unit]
+
+        {DELAY 500}
+
+        [kill]
+            id="Gwiti Ha'atel"
+            fire_event=no
+            animate=yes
+        [/kill]
+
+        [kill]
+            x,y=23,3
+            fire_event=no
+            animate=no
+        [/kill]
+
+        [kill]
+            x,y=25,4
+            fire_event=no
+            animate=no
+        [/kill]
+
+        {DELAY 500}
+
+        {FADE_TO_BLACK}
 
         [place_shroud]
             side=1
         [/place_shroud]
-    [/event]
-    [event]
-        name=start
+
+        {DELAY 2000}
+
+        {FADE_IN}
+
+        {DELAY 500}
+
+        [unstore_unit]
+            variable=gwiti_store
+        [/unstore_unit]
+
+        {CLEAR_VARIABLE gwiti_store}
+
+        [redraw]
+            clear_shroud=yes
+        [/redraw]
+
+        [modify_unit]
+            [filter]
+                id="Gwiti Ha'atel"
+            [/filter]
+            type=Demilich
+        [/modify_unit]
+
+        {FULL_HEAL side=1}
+
+        [redraw]
+            clear_shroud=yes
+        [/redraw]
+
+        {DELAY 1000}
+
+        [message]
+            speaker="Gwiti Ha'atel"
+            message= _ "Great."
+            sound=lich-die.ogg
+        [/message]
+        [message]
+            speaker="Gwiti Ha'atel"
+            message= _ "Now my journey of revenge begins... again."
+        [/message]
+
+        [hide_unit][/hide_unit]
+
+        {FADE_TO_BLACK}
+
+        [place_shroud]
+            side=1
+        [/place_shroud]
+
+        {DELAY 500}
+
         [message]
             speaker=narrator
             image=wesnoth-icon.png
             caption= _ "The Dark Hordes"
             message="" # wmllint: ignore
             [option]
-                message= _ "Continue playing to Part 2"
+                message= _ "Continue playing to Part Two"
                 [command]
                     [endlevel]
                         next_scenario=10_Return_to_the_Northlands
