--- a/scenarios/10_Return_to_the_Northlands.cfg
+++ b/scenarios/10_Return_to_the_Northlands.cfg
@@ -4,16 +4,149 @@
     id=10_Return_to_the_Northlands
     name= _ "Return to the Northlands"
     next_scenario=11_An_Orcish_Coup
+    victory_when_enemies_defeated=no
     map_file=10_Return_to_the_Northlands.map
-    {TURNS 32 30 28}
+    {TDH_TURNS 34 32 30 28}
     {DEFAULT_SCHEDULE_DAWN}
 
-    {INTRO_AND_SCENARIO_MUSIC battle.ogg northerners.ogg}
-    {EXTRA_SCENARIO_MUSIC vengeful.ogg}
-    {EXTRA_SCENARIO_MUSIC the_dangerous_symphony.ogg}
+    {STORYTXT_RETURN_TO_THE_NORTHLANDS}
+    {TDH_TRACK {JOURNEY_10_NEW}}
+
+    [side]
+        type=Demilich
+        id="Gwiti Ha'atel"
+        name= _ "Gwiti Ha’atel"
+        unrenamable=yes
+        side=1
+        canrecruit=yes
+        controller=human
+        recruit=Dark Adept,Walking Corpse,Skeleton,Skeleton Archer,Vampire Bat,Ghost,Ghoul
+        {TDH_GOLD 220 200 180 160}
+        {TDH_INCOME 6 4 2 0}
+        team_name=undead
+        user_team_name= _ "team_name^Gwiti"
+        facing=nw
+        fog=yes
+        share_view=yes
+        {FLAG_VARIANT undead}
+    [/side]
+
+    [side]
+        no_leader=yes
+        save_id=Tanar
+        side=2
+        controller=human
+        recruit=Orcish Grunt,Orcish Archer,Orcish Assassin,Goblin Spearman,Troll Whelp,Wolf Rider
+        {TDH_GOLD 260 240 220 200}
+        {TDH_INCOME 6 4 2 0}
+        team_name=undead
+        user_team_name= _ "team_name^Tanar"
+        facing=nw
+        fog=yes
+        share_view=yes
+        {FLAG_VARIANT6 ragged}
+    [/side]
+
+    [side]
+        type=Orcish Warlord
+        id=Vrork
+        name= _ "Vrork"
+        side=3
+        canrecruit=yes
+
+        [ai]
+            aggression=0.8
+            caution=0.0
+            scout_village_targeting=1.0
+            leader_value=0
+        [/ai]
+
+        recruit=Orcish Warrior,Orcish Grunt,Orcish Crossbowman,Orcish Archer,Orcish Assassin,Troll Whelp
+        {TDH_GOLD 440 520 600 680}
+        {TDH_INCOME 0 6 12 18}
+        team_name=orcs
+        user_team_name= _ "team_name^Orcs"
+        facing=se
+        {FLAG_VARIANT6 ragged}
+    [/side]
 
     [event]
         name=prestart
+
+#ifdef CAMPAIGN_THE_DARK_HORDES_PART_2
+        [unit]
+            type=Orcish Warrior
+            id=Tanar
+            name= _ "Tanar"
+            unrenamable=yes
+            profile=portraits/tanar.png
+            canrecruit=yes
+            side=2
+            {TDH_QUANTITY experience 40 32 24 16}
+            facing=ne
+            placement=leader
+            [modifications]
+                {TRAIT_LOYAL_HERO}
+                {TRAIT_QUICK}
+            [/modifications]
+        [/unit]
+
+        [remove_unit_overlay]
+            id=Tanar
+            image=misc/hero-icon.png
+        [/remove_unit_overlay]
+
+        [gold]
+            side=1
+            {TDH_QUANTITY amount 260 240 220 200}
+        [/gold]
+        [gold]
+            side=2
+            {TDH_QUANTITY amount 220 200 180 160}
+        [/gold]
+#else
+        [disallow_recruit]
+            side=1
+            type=Orcish Grunt,Orcish Archer,Orcish Assassin
+        [/disallow_recruit]
+
+        [recall]
+            id=Tanar
+        [/recall]
+
+        [store_unit]
+            [filter]
+                id=Tanar
+            [/filter]
+            variable=tanar_store
+            kill=yes
+        [/store_unit]
+
+        {VARIABLE tanar_store.canrecruit yes}
+        {VARIABLE tanar_store.side 2}
+
+        [store_starting_location]
+            side=2
+            variable=sl
+        [/store_starting_location]
+
+        [unstore_unit]
+            variable=tanar_store
+            x=$sl.x
+            y=$sl.y
+        [/unstore_unit]
+        [remove_unit_overlay]
+            x=$sl.x
+            y=$sl.y
+            image=misc/hero-icon.png
+        [/remove_unit_overlay]
+
+        [clear_variable]
+            name=tanar_store,sl
+        [/clear_variable]
+
+        {MODIFY_UNIT (race,side,x,y=orc,1,recall,recall) side 2}
+#endif
         [objectives]
             [objective]
                 condition=win
@@ -37,156 +170,14 @@
         [/objectives]
     [/event]
 
-    victory_when_enemies_defeated=no
-
-    {STORYTXT_RETURN_TO_THE_NORTHLANDS}
-    {TDH_TRACK {JOURNEY_10_NEW}}
-
-    [side]
-        type=Demilich
-        id="Gwiti Ha'atel"
-        name= _ "Gwiti Ha’atel"
-        unrenamable=yes
-        side=1
-        canrecruit=yes
-        controller=human
-        recruit=Dark Adept,Walking Corpse,Skeleton,Skeleton Archer,Vampire Bat,Ghost,Ghoul
-        {GOLD 220 200 180}
-        {INCOME 4 2 0}
-        team_name=undead
-        user_team_name= _ "team_name^Gwiti"
-        facing=nw
-        fog=yes
-        share_view=yes
-        {FLAG_VARIANT undead}
-    [/side]
-
-    [side]
-        no_leader=yes
-        save_id=Tanar
-        side=2
-        controller=human
-        recruit=Orcish Grunt,Orcish Archer,Orcish Assassin,Goblin Spearman,Troll Whelp,Wolf Rider
-        {GOLD 240 220 200}
-        {INCOME 6 4 2}
-        team_name=undead
-        user_team_name= _ "team_name^Tanar"
-        facing=nw
-        fog=yes
-        share_view=yes
-        {FLAG_VARIANT6 ragged}
-    [/side]
-
-    [side]
-        type=Orcish Warlord
-        id=Vrork
-        name= _ "Vrork"
-        side=3
-        canrecruit=yes
-
-        [ai]
-            aggression=0.8
-            caution=-0.2
-            scout_village_targeting=1.0
-            leader_value=0
-        [/ai]
-
-        recruit=Orcish Warrior,Orcish Grunt,Orcish Crossbowman,Orcish Archer,Orcish Assassin,Troll Whelp
-        {GOLD 520 600 680}
-        {INCOME 6 12 18}
-        team_name=orcs
-        user_team_name= _ "team_name^Orcs"
-        facing=se
-        {FLAG_VARIANT6 ragged}
-    [/side]
-
-    [event]
-        name=prestart
-        {MODIFY_UNIT (side=1) facing nw}
-
-#ifdef CAMPAIGN_THE_DARK_HORDES_PART_2
-        [unit]
-            type=Orcish Warrior
-            id=Tanar
-            name= _ "Tanar"
-            unrenamable=yes
-            profile=portraits/tanar.png
-            canrecruit=yes
-            side=2
-            {QUANTITY experience 40 32 24}
-            facing=ne
-            placement=leader
-            [modifications]
-                {TRAIT_LOYAL_HERO}
-                {TRAIT_STRONG}
-            [/modifications]
-        [/unit]
-        [remove_unit_overlay]
-            id=Tanar
-            image=misc/hero-icon.png
-        [/remove_unit_overlay]
-
-        [gold]
-            side=1
-            {QUANTITY amount 220 200 180}
-        [/gold]
-        [gold]
-            side=2
-            {QUANTITY amount 220 200 180}
-        [/gold]
-#else
-        [disallow_recruit]
-            side=1
-            type=Orcish Grunt,Orcish Archer,Orcish Assassin
-        [/disallow_recruit]
-
-        [recall]
-            id=Tanar
-            show=no
-        [/recall]
-
-        [store_unit]
-            [filter]
-                id=Tanar
-            [/filter]
-            variable=Tanar_store
-            kill=yes
-        [/store_unit]
-
-        {VARIABLE Tanar_store.canrecruit yes}
-        {VARIABLE Tanar_store.side 2}
-
-        [store_starting_location]
-            side=2
-            variable=sl
-        [/store_starting_location]
-
-        [unstore_unit]
-            variable=Tanar_store
-            x=$sl.x
-            y=$sl.y
-        [/unstore_unit]
-        [remove_unit_overlay]
-            x=$sl.x
-            y=$sl.y
-            image=misc/hero-icon.png
-        [/remove_unit_overlay]
-
-        [clear_variable]
-            name=Tanar_store,sl
-        [/clear_variable]
-
-        {MODIFY_UNIT (race,side,x,y=orc,1,recall,recall) side 2}
-#endif
-    [/event]
-
     {STARTING_VILLAGES_ALL 3}
-    {STARTING_VILLAGES 1 7}
-    {STARTING_VILLAGES 2 7}
+    {STARTING_VILLAGES 1 4}
+    {STARTING_VILLAGES 2 3}
 
     [event]
         name=start
-        {CLEAR_FOG 1 22 9 3}
+
+        {CLEAR_FOG 1 21 5 3}
 
         [message]
             speaker=Vrork
@@ -206,42 +197,45 @@
         [/message]
         [message]
             speaker="Gwiti Ha'atel"
-            message= _ "It seems I’ll have dead orcs marching with me as well as living ones. He, he he..."
+            message= _ "It seems I’ll have dead orcs marching with me as well as living ones. He, he, he..."
         [/message]
 
         {UNCLEAR_FOG}
+
+        {APPEND_MUSIC vengeful.ogg}
+        {APPEND_MUSIC the_dangerous_symphony.ogg}
     [/event]
+
     [event]
         name=turn 4
         [message]
             speaker=narrator
-            message= _ "As dusk fell, Gwiti noticed a spirit he had once seen approaching close by..."
+            message= _ "As dusk fell, Gwiti noticed the spirit he had once seen approaching close by..."
             image=wesnoth-icon.png
         [/message]
 
         [scroll_to]
-            x,y=18,28
+            x,y=24,26
         [/scroll_to]
 
         [sound]
             name=wail-long.wav
         [/sound]
 
-        {DELAY 1000}
-
         [unit]
             id=Leganoth
             name= _ "Leganoth"
-            type=Dark Spirit
+            type=Nightgaunt
             unrenamable=yes
-            x,y=18,28
+            x,y=24,26
             animate=yes
             side=1
-            facing=ne
+            facing=se
             [modifications]
                 {TRAIT_LOYAL_HERO}
             [/modifications]
         [/unit]
+
         [redraw]
             clear_shroud=yes
         [/redraw]
@@ -250,7 +244,7 @@
 
         [message]
             speaker="Gwiti Ha'atel"
-            message= _ "Ah, have the shadow of a distant memory come to me... again? I would have cast a spell for you never to approach me again."
+            message= _ "Ah, have the shadow of the distant memory come to me... again? I would have cast the spell for you never to approach me again."
         [/message]
         [message]
             speaker=Leganoth
@@ -266,20 +260,10 @@
             fire_event=no
             animate=yes
         [/kill]
+
         [redraw]
             clear_shroud=yes
         [/redraw]
-    [/event]
-
-    [event]
-        name=recruit
-        [filter]
-            type=Ghoul
-        [/filter]
-        [message]
-            speaker="Gwiti Ha'atel"
-            message= _ "Crelanu certainly knew some interesting magic!"
-        [/message]
     [/event]
 
     [event]
@@ -287,7 +271,6 @@
         [filter]
             id="Gwiti Ha'atel"
         [/filter]
-
         [message]
             speaker="Gwiti Ha'atel"
             message= _ "What? I can’t die! Noooo!"
