--- a/scenarios/01_A_New_Chance.cfg
+++ b/scenarios/01_A_New_Chance.cfg
@@ -1,25 +1,107 @@
 #textdomain wesnoth-The_Dark_Hordes
 
-# wmllint: local spelling Arkal-Thil
-
 [scenario]
     id=01_A_New_Chance
     name= _ "A New Chance"
     next_scenario=02_Brother_Against_Brother
     map_file=01_A_New_Chance.map
-    {TURNS 30 28 26}
+    {TDH_TURNS 38 34 30 26}
     {DEFAULT_SCHEDULE_DUSK}
 
-    {INTRO_AND_SCENARIO_MUSIC underground.ogg revelation.ogg}
-    {EXTRA_SCENARIO_MUSIC gameplay06.ogg}
-    {EXTRA_SCENARIO_MUSIC into_the_shadows.ogg}
+    {STORYTXT_INTRO}
+    {TDH_TRACK {JOURNEY_01_NEW}}
+
+    {STARTING_VILLAGES 1 3}
+
+    [side]
+        type=Initiate
+        id="Gwiti Ha'atel"
+        name= _ "Gwiti Ha’atel"
+        unrenamable=yes
+        side=1
+        canrecruit=yes
+        controller=human
+        recruit=Walking Corpse,Skeleton,Skeleton Archer,Ghost
+        {TDH_GOLD 160 140 120 100}
+        {TDH_INCOME 8 6 4 2}
+        user_team_name= _ "team_name^Gwiti"
+        facing=se
+        fog=yes
+        {FLAG_VARIANT undead}
+    [/side]
+
+    [side]
+        type=Naga Warrior
+        id=Xabrak
+        name= _ "Xabrak"
+        side=2
+        canrecruit=yes
+
+        [ai]
+            aggression=0.8
+            caution=0.2
+            grouping=no
+        [/ai]
+
+        recruit=Naga Fighter
+        {TDH_GOLD 0 20 40 60}
+        team_name=enemies
+        user_team_name= _ "team_name^Xabrak"
+        facing=ne
+        {FLAG_VARIANT6 ragged}
+
+        {GENERIC_UNIT 2 (Naga Dirkfang) 8 17}
+        {GENERIC_UNIT 2 (Naga Fighter) 10 18}
+    [/side]
+
+    [side]
+        type=Ogre
+        id=Grakarat
+        name= _ "Grakarat"
+        side=3
+        canrecruit=yes
+
+        [ai]
+            aggression=0.8
+            caution=0.2
+            grouping=no
+        [/ai]
+
+        recruit=Young Ogre,Troll Whelp
+        {TDH_GOLD 0 20 40 60}
+        {TDH_INCOME 0 2 4 6}
+        team_name=enemies
+        user_team_name= _ "team_name^Grakarat"
+        facing=sw
+        {FLAG_VARIANT6 ragged}
+
+        [unit]
+            type=Ogre
+            id=Rek Iceheart
+            name= _ "Rek Iceheart"
+            x,y=34,8
+            random_traits=yes
+            ai_special=guardian
+        [/unit]
+        [unit]
+            type=Young Ogre
+            id=Gabtur
+            name= _ "Gabtur"
+            x,y=26,13
+            random_traits=yes
+            ai_special=guardian
+        [/unit]
+
+        {GENERIC_UNIT 3 (Young Ogre) 15 15}
+        {GENERIC_UNIT 3 (Young Ogre) 16 15}
+    [/side]
 
     [event]
         name=prestart
         [objectives]
             [objective]
                 condition=win
-                description= _ "Clear the land of monsters"
+                description= _ "Defeat all enemy leaders"
             [/objective]
             [objective]
                 condition=lose
@@ -35,87 +117,6 @@
         [/objectives]
     [/event]
 
-    {STORYTXT_INTRO}
-    {TDH_TRACK {JOURNEY_01_NEW}}
-
-    {STARTING_VILLAGES 2 1}
-    {STARTING_VILLAGES 1 5}
-
-    victory_when_enemies_defeated=no
-
-    [side]
-        type=Initiate
-        id="Gwiti Ha'atel"
-        name= _ "Gwiti Ha’atel"
-        unrenamable=yes
-        side=1
-        canrecruit=yes
-        controller=human
-        recruit=Walking Corpse,Skeleton,Skeleton Archer,Ghost
-        {GOLD 120 100 80}
-        {INCOME 4 2 0}
-        user_team_name= _ "team_name^Gwiti"
-        facing=se
-        fog=yes
-        {FLAG_VARIANT undead}
-    [/side]
-
-    [side]
-        type=Ogre
-        id=Grakarat
-        name= _ "Grakarat"
-        side=2
-        canrecruit=yes
-
-        [ai]
-            aggression=0.8
-            caution=0.2
-            grouping=no
-            leader_value=2
-        [/ai]
-
-        recruit=Young Ogre,Troll Whelp
-        {GOLD 4 6 8}
-        {INCOME 4 6 8}
-        user_team_name= _ "team_name^Monsters"
-        facing=ne
-        {FLAG_VARIANT6 ragged}
-
-        {LOYAL_GUARD_UNIT 2 (Ogre) 8 8}
-        {LOYAL_GUARD_UNIT 2 (Troll Whelp) 5 13}
-
-#ifdef HARD
-        {LOYAL_GUARD_UNIT 2 (Soulless) 28 18}
-        {LOYAL_GUARD_UNIT 2 (Soulless) 28 19}
-#else
-        {LOYAL_GUARD_UNIT 2 (Walking Corpse) 28 18}
-        {LOYAL_GUARD_UNIT 2 (Walking Corpse) 28 19}
-#endif
-        {LOYAL_GUARD_UNIT 2 (Naga Fighter) 34 6}
-
-        [unit]
-            type=Troll
-            id=Rek Iceheart
-            name= _ "Rek Iceheart"
-            x,y=34,17
-            random_traits=yes
-            ai_special=guardian
-            upkeep=loyal
-        [/unit]
-        [unit]
-            type=Young Ogre
-            id=Gabtur
-            name= _ "Gabtur"
-            x,y=25,8
-            random_traits=yes
-            ai_special=guardian
-            upkeep=loyal
-        [/unit]
-    [/side]
-
-    {CONTINUOUS_SOUND_SOURCE campfire 18 7 (ambient/campfire.ogg)}
-    {SOUND_SOURCE_RANGE 2 10}
-
     [event]
         name=start
         [message]
@@ -127,91 +128,44 @@
             message= _ "The area was blighted. Not one human being was there."
             image=wesnoth-icon.png
         [/message]
-
-        [animate_unit]
-            [filter]
-                id="Gwiti Ha'atel"
-            [/filter]
-            flag=attack
-            hits=yes
-            [primary_attack]
-                range=ranged
-            [/primary_attack]
-        [/animate_unit]
-
         [message]
             speaker="Gwiti Ha'atel"
             message= _ "Apparently the dark gods have not yet completely abandoned me. The smell of the beast is in the air around here — perhaps they are the material for testing whether I shall survive. Conveniently for me, this ruin is piled high with corpses."
         [/message]
-    [/event]
 
-    [event]
-        name=die
-        first_time_only=no
-        [filter]
-            side=2
-        [/filter]
-        [if]
-            [have_unit]
-                side=2
-            [/have_unit]
-            [else]
-                [message]
-                    speaker="Gwiti Ha'atel"
-                    message= _ "These monsters of the land were not even my enemies to confront!"
-                [/message]
-                [endlevel]
-                    result=victory
-                    bonus=yes
-                    {NEW_GOLD_CARRYOVER 60}
-                [/endlevel]
-            [/else]
-        [/if]
+        {APPEND_MUSIC battlecry.ogg}
     [/event]
 
     [event]
         name=last breath
         [filter]
-            id="Gwiti Ha'atel"
-        [/filter]
-        [message]
-            speaker=unit
-            message= _ "Noooo! Not now, not when I have escaped!"
-        [/message]
-        [endlevel]
-            result=defeat
-        [/endlevel]
-    [/event]
-
-    [event]
-        name=last breath
-        [filter]
-            id=Grakarat
+            id=Xabrak
         [/filter]
         [message]
             speaker=unit
             message= _ "Argh! I die!"
         [/message]
     [/event]
+
     [event]
         name=die
         [filter]
-            id=Grakarat
+            id=Xabrak
         [/filter]
         [message]
-            speaker="Gwiti Ha'atel"
+            speaker=second_unit
             message= _ "Who is hiding there?"
         [/message]
 
         [unit]
             id="Arkal-Thil"
             name= _ "Arkal-Thil"
-            profile=portraits/arkal.png
+            profile=portraits/arkal.webp
             type=Dark Adept
             x=$unit.x
             y=$unit.y
             facing=$unit.facing
-            {QUANTITY experience 32 24 16}
+            {TDH_QUANTITY experience 34 26 18 10}
             side=1
             overwrite=yes
             [modifications]
@@ -230,20 +184,19 @@
         [message]
             speaker="Gwiti Ha'atel"
             message= _ "You seem to be necromancer like me. Then come with me. Obey me and you will become more mighty."
+            scroll=no
         [/message]
         [message]
             speaker="Arkal-Thil"
             message= _ "I understood, master! There are still other brethren hiding. They also shall join you."
         [/message]
-        [message]
-            speaker=narrator
-            message= _ "You can now recruit dark adepts and vampire bats."
-            image=wesnoth-icon.png
-        [/message]
+
+        {APPEND_MUSIC into_the_shadows.ogg}
+        {APPEND_MUSIC revelation.ogg}
 
         [allow_recruit]
             side=1
-            type=Vampire Bat,Dark Adept
+            type=Vampire Bat,Dark Adept,Ghoul
         [/allow_recruit]
     [/event]
 
@@ -264,6 +217,44 @@
             speaker="Arkal-Thil"
             message= _ "Ugh... This is nightmare..."
         [/message]
+    [/event]
+
+    [event]
+        name=enemies defeated
+        [message]
+            speaker="Gwiti Ha'atel"
+            message= _ "These enemies are not worthy of being real opponents with whom I should confront!"
+        [/message]
+        [endlevel]
+            result=victory
+            bonus=yes
+            {NEW_GOLD_CARRYOVER 60}
+        [/endlevel]
+    [/event]
+
+    [event]
+        name=attack
+        [filter]
+            id="Gwiti Ha'atel"
+        [/filter]
+        [message]
+            speaker=unit
+            message= _ "Death is good for you who bother me!"
+        [/message]
+    [/event]
+
+    [event]
+        name=last breath
+        [filter]
+            id="Gwiti Ha'atel"
+        [/filter]
+        [message]
+            speaker=unit
+            message= _ "Noooo! Not now, not when I have escaped!"
+        [/message]
+        [endlevel]
+            result=defeat
+        [/endlevel]
     [/event]
 
     [event]
