--- a/scenarios/02_Brother_Against_Brother.cfg
+++ b/scenarios/02_Brother_Against_Brother.cfg
@@ -1,13 +1,11 @@
 #textdomain wesnoth-The_Dark_Hordes
 
-# wmllint: local spelling Nati
-
 [scenario]
     id=02_Brother_Against_Brother
     name= _ "Brother Against Brother"
     next_scenario=03_Skull_of_Morgorath
     map_file=02_Brother_Against_Brother.map
-    {TURNS 30 28 26}
+    {TDH_TURNS 30 28 26 24}
     {DAWN}
     {DAWN}
     {MORNING}
@@ -25,6 +23,56 @@
 
     {INTRO_AND_SCENARIO_MUSIC revelation.ogg vengeful.ogg}
     {EXTRA_SCENARIO_MUSIC frantic.ogg}
+
+    {STORYTXT_BROTHER_AGAINST_BROTHER}
+    {TDH_TRACK {JOURNEY_02_NEW}}
+
+    {STARTING_VILLAGES 1 4}
+    {STARTING_VILLAGES 2 4}
+
+    [side]
+        type=Initiate
+        id="Gwiti Ha'atel"
+        name= _ "Gwiti Ha’atel"
+        unrenamable=yes
+        side=1
+        canrecruit=yes
+        controller=human
+        {TDH_GOLD 180 160 140 120}
+        {TDH_INCOME 8 6 4 2}
+        user_team_name= _ "team_name^Gwiti"
+        facing=ne
+        {FLAG_VARIANT undead}
+    [/side]
+
+    [side]
+        type=Deathmaster
+        id="Nati Ha'atel"
+        name= _ "Nati Ha’atel"
+        profile=portraits/nati.webp
+        side=2
+        canrecruit=yes
+
+        [ai]
+            aggression=0.6
+            caution=0.2
+            leader_value=2
+            recruitment_pattern=fighter,fighter,fighter,scout,scout,archer,archer,archer
+        [/ai]
+
+        recruit=Dark Adept,Ghost,Walking Corpse,Vampire Bat,Skeleton,Skeleton Archer
+        {TDH_GOLD 80 100 120 140}
+        {TDH_INCOME 4 6 8 10}
+        user_team_name= _ "team_name^Nati"
+        facing=sw
+        {FLAG_VARIANT undead}
+    [/side]
+
+    {CONTINUOUS_SOUND_SOURCE campfire1 10 21 (ambient/campfire.ogg)}
+    {SOUND_SOURCE_RANGE 1 6}
+
+    {CONTINUOUS_SOUND_SOURCE campfire2 18 5 (ambient/campfire.ogg)}
+    {SOUND_SOURCE_RANGE 1 6}
 
     [event]
         name=prestart
@@ -47,54 +95,6 @@
         [/objectives]
     [/event]
 
-    {STORYTXT_BROTHER_AGAINST_BROTHER}
-    {TDH_TRACK {JOURNEY_02_NEW}}
-
-    {STARTING_VILLAGES 1 6}
-    {STARTING_VILLAGES 2 10}
-
-    [side]
-        type=Initiate
-        id="Gwiti Ha'atel"
-        name= _ "Gwiti Ha’atel"
-        unrenamable=yes
-        side=1
-        canrecruit=yes
-        controller=human
-        {GOLD 160 140 120}
-        {INCOME 4 2 0}
-        user_team_name= _ "team_name^Gwiti"
-        facing=sw
-        {FLAG_VARIANT undead}
-    [/side]
-
-    [side]
-        type=Deathmaster
-        id="Nati Ha'atel"
-        name= _ "Nati Ha’atel"
-        profile=portraits/nati.png
-        side=2
-        canrecruit=yes
-
-        [ai]
-            aggression=0.6
-            caution=0.2
-            leader_value=2
-            recruitment_pattern=fighter,fighter,fighter,scout,scout,archer,archer,archer
-        [/ai]
-
-#ifdef HARD
-        recruit=Dark Adept,Ghost,Soulless,Blood Bat,Revenant,Bone Shooter
-#else
-        recruit=Dark Adept,Ghost,Walking Corpse,Vampire Bat,Skeleton,Skeleton Archer
-#endif
-        {GOLD 120 160 240}
-        {INCOME 2 4 8}
-        user_team_name= _ "team_name^Nati"
-        facing=ne
-        {FLAG_VARIANT undead}
-    [/side]
-
     [event]
         name=start
         [message]
@@ -108,127 +108,57 @@
         [/message]
         [message]
             speaker="Nati Ha'atel"
-            message= _ "This land? Do you truly not know where we are? Then you are a greater fool than I had thought."
+            message= _ "This land? Do you truly not know where we are? Then you are even more of an idiot than I had anticipated."
         [/message]
         [message]
             speaker="Gwiti Ha'atel"
-            message= _ "Cease your blustering, fool, and prepare to die... again."
+            message= _ "Cease your blustering — the darkness shall always be upon my side. You must die to prove it."
         [/message]
         [message]
             speaker="Nati Ha'atel"
-            message= _ "I will fight you with all my strength to prevent that, and I was always the stronger of us. Flee now and save your miserable hide before I make it a carpet."
+            message= _ "I will fight you with all my strength to prevent that, and I was always the stronger of us. Flee now and save your miserable hide before I make it my carpet."
         [/message]
+
+        [animate_unit]
+            [filter]
+                id="Nati Ha'atel"
+            [/filter]
+            flag=attack
+            hits=yes
+            [primary_attack]
+                range=ranged
+            [/primary_attack]
+        [/animate_unit]
+
+#ifdef EASY
+        {GENERIC_UNIT 2 (Skeleton Archer) 19 3} {ANIMATE}
+        {GENERIC_UNIT 2 (Skeleton Archer) 19 4} {ANIMATE}
+#else
+        {GENERIC_UNIT 2 (Bone Shooter) 19 3} {ANIMATE}
+        {GENERIC_UNIT 2 (Bone Shooter) 19 4} {ANIMATE}
+#endif
         [message]
             speaker="Gwiti Ha'atel"
-            message= _ "Don’t be silly! I’m not hairy enough to be a carpet! But your scalp would make a good pillow."
+            message= _ "I am not hairy enough to be your carpet! But your scalp would make my good pillow."
         [/message]
     [/event]
 
     [event]
-        name=last breath
-        [filter]
-            id="Gwiti Ha'atel"
-        [/filter]
-        [message]
-            speaker=unit
-            message= _ "What? I can’t die! I already have! Noooo!"
-        [/message]
+        name=side 2 turn 5
         [message]
             speaker="Nati Ha'atel"
-            message= _ "Ha ha ha, did I not tell you it would be so? Perhaps I shall summon your shade to serve me one day. Until then...farewell!"
+            message= _ "Your doom is at hand!"
         [/message]
-        [message]
-            speaker=unit
-            message= _ "It is over. I am doomed."
-        [/message]
-        [endlevel]
-            result=defeat
-        [/endlevel]
+        [gold]
+            side=2
+            {TDH_QUANTITY amount 0 20 40 60}
+        [/gold]
     [/event]
-
     [event]
-        name=last breath
-        [filter]
-            id="Nati Ha'atel"
-        [/filter]
-        [message]
-            speaker=unit
-            message= _ "I...have failed to win this battle. I am defeated. I will not believe it."
-        [/message]
+        name=side 1 turn 6
         [message]
             speaker="Gwiti Ha'atel"
-            message= _ "Die, yes, die, and go to the Land of the Dead. Perhaps one day you will be back under my command!"
-        [/message]
-        [kill]
-            id="Nati Ha'atel"
-            fire_event=no
-            animate=yes
-        [/kill]
-        [endlevel]
-            result=victory
-            bonus=yes
-            {NEW_GOLD_CARRYOVER 60}
-        [/endlevel]
-    [/event]
-
-    [event]
-        name=last breath
-        [filter]
-            [not]
-                race=undead
-            [/not]
-        [/filter]
-        [filter_second]
-            id="Gwiti Ha'atel"
-        [/filter_second]
-        [message]
-            speaker=second_unit
-            message= _ "Didn’t I tell you so?!"
-        [/message]
-    [/event]
-    [event]
-        name=last breath
-        [filter]
-            [not]
-                race=undead
-            [/not]
-        [/filter]
-        [filter_second]
-            id="Nati Ha'atel"
-        [/filter_second]
-        [message]
-            speaker=second_unit
-            message= _ "And by my own hands you died!"
-        [/message]
-    [/event]
-    [event]
-        name=attack
-        [filter]
-            id="Gwiti Ha'atel"
-        [/filter]
-        [filter_second]
-            [not]
-                race=undead
-            [/not]
-        [/filter_second]
-        [message]
-            speaker="Gwiti Ha'atel"
-            message= _ "I am Gwiti the Mighty, prepare to die!"
-        [/message]
-    [/event]
-    [event]
-        name=attack
-        [filter]
-            id="Nati Ha'atel"
-        [/filter]
-        [filter_second]
-            [not]
-                race=undead
-            [/not]
-        [/filter_second]
-        [message]
-            speaker="Nati Ha'atel"
-            message= _ "Now you shall die!"
+            message= _ "His legions are nothing more than hodge-podge... It is only the matter of time before we beat him."
         [/message]
     [/event]
 
@@ -242,5 +172,67 @@
             speaker="Gwiti Ha'atel"
             message= _ "May I remind you that even as we speak, my undead legions are marching towards you?"
         [/message]
+    [/event]
+
+    [event]
+        name=last breath
+        [filter]
+            id="Nati Ha'atel"
+        [/filter]
+        [message]
+            speaker="Nati Ha'atel"
+            message= _ "My foolish brother... Our doom began when we were born. You are just slightly longer-lasting in your luck."
+        [/message]
+        [message]
+            speaker="Gwiti Ha'atel"
+            message= _ "Is that all you want to say? I will surely stay alive and take revenge against Wesnoth. You must go to the Land of the Dead and prepare to join my hordes."
+        [/message]
+        [message]
+            speaker="Nati Ha'atel"
+            message= _ "It is over... I am doomed."
+        [/message]
+        [endlevel]
+            result=victory
+            bonus=yes
+            {NEW_GOLD_CARRYOVER 60}
+        [/endlevel]
+    [/event]
+
+    [event]
+        name=die
+        [filter_second]
+            id="Gwiti Ha'atel"
+        [/filter_second]
+        [message]
+            speaker=second_unit
+            message= _ "Anyone who stands in my way will be burned to ashes!"
+        [/message]
+    [/event]
+    [event]
+        name=attack
+        [filter]
+            id="Nati Ha'atel"
+        [/filter]
+        [filter_second]
+            id="Gwiti Ha'atel"
+        [/filter_second]
+        [message]
+            speaker=unit
+            message= _ "Now you shall perish!"
+        [/message]
+    [/event]
+
+    [event]
+        name=last breath
+        [filter]
+            id="Gwiti Ha'atel"
+        [/filter]
+        [message]
+            speaker=unit
+            message= _ "What? I can’t die! Noooo!"
+        [/message]
+        [endlevel]
+            result=defeat
+        [/endlevel]
     [/event]
 [/scenario]
