--- a/scenarios/03_Skull_of_Morgorath.cfg
+++ b/scenarios/03_Skull_of_Morgorath.cfg
@@ -1,17 +1,103 @@
 #textdomain wesnoth-The_Dark_Hordes
 
-# wmllint: local spelling Gwitiii
-
 [scenario]
     id=03_Skull_of_Morgorath
     name= _ "The Skull of Morgorath"
     next_scenario=04_Mages_And_Elves
     map_file=03_Skull_of_Morgorath.map
-    {TURNS 34 30 26}
+    {TDH_TURNS 38 34 30 26}
     {DEFAULT_SCHEDULE_MORNING}
 
-    {INTRO_AND_SCENARIO_MUSIC revelation.ogg northerners.ogg}
-    {EXTRA_SCENARIO_MUSIC wanderer.ogg}
+    {STORYTXT_SKULL_OF_MORGORATH}
+    {TDH_TRACK {JOURNEY_03_NEW}}
+
+    {STARTING_VILLAGES_ALL 4}
+    {STARTING_VILLAGES 2 5}
+    {STARTING_VILLAGES 3 4}
+
+    [side]
+        type=Initiate
+        id="Gwiti Ha'atel"
+        name= _ "Gwiti Ha’atel"
+        unrenamable=yes
+        side=1
+        canrecruit=yes
+        controller=human
+        {TDH_GOLD 180 160 140 120}
+        {TDH_INCOME 8 6 4 2}
+        user_team_name= _ "team_name^Gwiti"
+        facing=se
+        {FLAG_VARIANT undead}
+    [/side]
+
+    [side]
+        type=Orcish Warrior
+        id=Karz Gholum
+        name= _ "Karz Gholum"
+        side=2
+        canrecruit=yes
+
+        [ai]
+            aggression=0.8
+            caution=0.2
+            leader_value=2
+        [/ai]
+
+        recruit=Orcish Warrior,Orcish Grunt,Wolf Rider,Orcish Archer,Troll Whelp
+        {TDH_GOLD 0 20 40 60}
+        {TDH_INCOME 0 2 4 6}
+        team_name=enemies
+        user_team_name= _ "team_name^Orcs"
+        facing=se
+        {FLAG_VARIANT6 ragged}
+    [/side]
+
+    [side]
+        type=Orcish Warrior
+        id="Isidal B'Tai"
+        name= _ "Isidal B’Tai"
+        side=3
+        canrecruit=yes
+
+        [ai]
+            aggression=0.8
+            caution=0.2
+            leader_value=2
+        [/ai]
+
+        recruit=Orcish Grunt,Wolf Rider,Orcish Archer,Troll Whelp
+        {TDH_GOLD 20 40 60 80}
+        {TDH_INCOME -2 0 2 4}
+        team_name=enemies
+        user_team_name= _ "team_name^Orcs"
+        facing=se
+        {FLAG_VARIANT6 ragged}
+    [/side]
+
+    [side]
+        type=Orcish Warrior
+        id=Nakur Kimoni
+        name= _ "Nakur Kimoni"
+        side=4
+        canrecruit=yes
+
+        [ai]
+            aggression=0.8
+            caution=0.2
+            leader_value=2
+        [/ai]
+
+        recruit=Orcish Warrior,Orcish Grunt,Wolf Rider,Orcish Archer,Troll
+        {TDH_GOLD 20 40 60 80}
+        {TDH_INCOME -2 0 2 4}
+        team_name=enemies
+        user_team_name= _ "team_name^Orcs"
+        facing=se
+        {FLAG_VARIANT6 ragged}
+    [/side]
+
+    {CONTINUOUS_SOUND_SOURCE campfire_gwiti 53 12 (ambient/campfire.ogg)}
+    {SOUND_SOURCE_RANGE 1 8}
 
     [event]
         name=prestart
@@ -36,99 +122,7 @@
                 carryover_percentage=60
             [/gold_carryover]
         [/objectives]
-    [/event]
 
-    {STORYTXT_SKULL_OF_MORGORATH}
-    {TDH_TRACK {JOURNEY_03_NEW}}
-
-    {STARTING_VILLAGES 4 20}
-    {STARTING_VILLAGES 3 10}
-    {STARTING_VILLAGES 2 8}
-    {STARTING_VILLAGES 1 4}
-
-    [side]
-        type=Initiate
-        id="Gwiti Ha'atel"
-        name= _ "Gwiti Ha’atel"
-        unrenamable=yes
-        side=1
-        canrecruit=yes
-        controller=human
-        {GOLD 160 140 120}
-        {INCOME 4 2 0}
-        user_team_name= _ "team_name^Gwiti"
-        facing=se
-        {FLAG_VARIANT undead}
-    [/side]
-
-    [side]
-        type=Orcish Warlord
-        id=Karz Gholum
-        name= _ "Karz Gholum"
-        side=2
-        canrecruit=yes
-
-        [ai]
-            aggression=0.8
-            caution=0.2
-            leader_value=2
-        [/ai]
-
-        recruit=Orcish Warrior,Orcish Grunt,Wolf Rider,Orcish Archer,Troll Whelp
-        {GOLD 40 60 100}
-        {INCOME 2 4 6}
-        team_name=enemies
-        user_team_name= _ "team_name^Orcs"
-        facing=nw
-        {FLAG_VARIANT6 ragged}
-    [/side]
-
-    [side]
-        type=Orcish Warlord
-        id="Isidal B'Tai"
-        name= _ "Isidal B’Tai"
-        side=3
-        canrecruit=yes
-
-        [ai]
-            aggression=0.8
-            caution=0.2
-            leader_value=2
-        [/ai]
-
-        recruit=Orcish Grunt,Wolf Rider,Orcish Archer,Troll Whelp
-        {GOLD 40 60 100}
-        {INCOME 0 2 4}
-        team_name=enemies
-        user_team_name= _ "team_name^Orcs"
-        facing=nw
-        {FLAG_VARIANT6 ragged}
-    [/side]
-
-    [side]
-        type=Orcish Warlord
-        id=Nakur Kimoni
-        name= _ "Nakur Kimoni"
-        side=4
-        canrecruit=yes
-
-        [ai]
-            aggression=0.8
-            caution=0.2
-            leader_value=2
-        [/ai]
-
-        recruit=Orcish Warrior,Orcish Grunt,Wolf Rider,Orcish Archer,Troll
-        {GOLD 60 80 120}
-        {INCOME 2 4 6}
-        team_name=enemies
-        user_team_name= _ "team_name^Orcs"
-        facing=nw
-        {FLAG_VARIANT6 ragged}
-    [/side]
-
-    [event]
-        name=prestart
         {VARIABLE warlord_bodycount 0}
     [/event]
 
@@ -136,24 +130,23 @@
         name=start
         [message]
             speaker=narrator
-            message= _ "After Gwiti destroyed his brother, he planned to march on Wesnoth to gain his revenge. But a Dark Spirit came to counsel him..."
+            message= _ "After Gwiti destroyed his brother, he planned to march on Wesnoth to gain his revenge. But an unseen spirit came to counsel him..."
             image=wesnoth-icon.png
         [/message]
 
-        [move_unit_fake]
-            type=Dark Spirit
-            x=5,4,3,3,3,4,5,6,7
-            y=1,1,2,3,4,4,5,5,5
-        [/move_unit_fake]
+        [sound]
+            name=wail.wav
+        [/sound]
 
         [unit]
             id=Leganoth
             name= _ "Leganoth"
-            type=Dark Spirit
+            type=Nightgaunt
             unrenamable=yes
-            x=7
-            y=5
+            x=57
+            y=14
             side=1
+            animate=yes
             facing=sw
             [modifications]
                 {TRAIT_LOYAL_HERO}
@@ -166,11 +159,11 @@
         [/message]
         [message]
             speaker="Gwiti Ha'atel"
-            message= _ "A Dark Spirit? Surely this is a token of my mastery of the undead!"
+            message= _ "Who the hell are you? I believe you are no ordinary spirit."
         [/message]
         [message]
             speaker=Leganoth
-            message= _ "Gwiti, do not yet march in pursuit of your revenge. First, you shall go south, against the orcs, and there find the Skull of Morgorath."
+            message= _ "Gwiti, do not yet march in pursuit of your revenge. First, you shall go westward, against the orcs, and there find the Skull of Morgorath."
         [/message]
         [message]
             speaker="Gwiti Ha'atel"
@@ -178,26 +171,32 @@
         [/message]
         [message]
             speaker=Leganoth
-            message= _ "Do you see the three orc clans of this land? Their banners are topped with skulls, as is their custom. But one of these is the Skull of Morgorath — Take it and your power will grow greater by far."
+            message= _ "Do you see the three orcish clans of this land? Their banners are topped with skulls, as is their custom. But one of these is the Skull of Morgorath — take it and your power will grow greater by far."
         [/message]
 
         [scroll_to_unit]
             side=2
             canrecruit=yes
         [/scroll_to_unit]
+
         {DELAY 1000}
 
         [scroll_to_unit]
             side=3
             canrecruit=yes
         [/scroll_to_unit]
+
         {DELAY 1000}
 
         [scroll_to_unit]
             side=4
             canrecruit=yes
         [/scroll_to_unit]
+
         {DELAY 1000}
+
+        {APPEND_MUSIC frantic.ogg}
+        {APPEND_MUSIC battlecry.ogg}
     [/event]
 
     [event]
@@ -207,7 +206,7 @@
         [/filter]
         [message]
             speaker=unit
-            message= _ "What? I can’t die! Noooo!"
+            message= _ "I perish here and now, darkness embraces me forever..."
         [/message]
         [endlevel]
             result=defeat
@@ -249,7 +248,7 @@
                 value=1
                 [message]
                     speaker=Leganoth
-                    message= _ "That is not the skull of Morgorath!"
+                    message= _ "That is not of Morgorath!"
                     scroll=no
                 [/message]
             [/case]
@@ -278,13 +277,15 @@
                 [/endlevel]
             [/case]
         [/switch]
+
         {VARIABLE_OP warlord_bodycount add 1}
     [/event]
+
     [event]
         name=victory
         [message]
             speaker="Gwiti Ha'atel"
-            message= _ "Argh! This is only half of the skull, and near enough to powerless! Begone, Spirit!"
+            message= _ "Argh! This is only half of the skull, and near enough to powerless! Begone, spirit!"
         [/message]
 
         {THUNDER (
@@ -308,7 +309,7 @@
         [/filter]
         [message]
             speaker="Gwiti Ha'atel"
-            message= _ "It’s been a long time since I fought anything myself!"
+            message= _ "Long time since I fought anything myself!"
         [/message]
     [/event]
 [/scenario]
