--- a/scenarios/09_Underground_River.cfg
+++ b/scenarios/09_Underground_River.cfg
@@ -4,66 +4,26 @@
     id=09_Underground_River
     name= _ "Underground River"
     next_scenario=09x_Inter
+    victory_when_enemies_defeated=no
     map_file=09_Underground_River.map
     turns=unlimited
     {DEEP_UNDERGROUND}
 
-    {INTRO_AND_SCENARIO_MUSIC underground.ogg snowfall.ogg}
-    {EXTRA_SCENARIO_MUSIC the_deep_path.ogg}
-    {EXTRA_SCENARIO_MUSIC into_the_shadows.ogg}
-
-    [event]
-        name=prestart
-        [objectives]
-            [objective]
-                condition=win
-                description= _ "Get to safety and..."
-            [/objective]
-            [objective]
-                condition=win
-                description= _ "...Kill all who stand in your way"
-            [/objective]
-            [objective]
-                condition=lose
-                description= _ "Death of Gwiti Ha’atel"
-            [/objective]
-            [objective]
-                condition=lose
-                description= _ "Death of Tanar"
-            [/objective]
-
-            [gold_carryover]
-                bonus=no
-                carryover_percentage=60
-            [/gold_carryover]
-
-            [note]
-                description= _ "Your castle will sink at the start of turn 4."
-                [show_if]
-                    [variable]
-                        name=sunken
-                        boolean_equals=no
-                    [/variable]
-                [/show_if]
-            [/note]
-        [/objectives]
-    [/event]
-
-    victory_when_enemies_defeated=no
-
     {STORYTXT_UNDERGROUND_RIVER}
     {TDH_TRACK {JOURNEY_09_NEW}}
 
+    {STARTING_VILLAGES_ALL 2}
+
     [side]
-        type=Demilich
+        type=Initiate
         id="Gwiti Ha'atel"
         name= _ "Gwiti Ha’atel"
         unrenamable=yes
         side=1
         canrecruit=yes
         controller=human
-        {GOLD 120 100 80}
-        {INCOME 4 2 0}
+        {TDH_GOLD 160 140 120 100}
+        {TDH_INCOME 6 4 2 0}
         user_team_name= _ "team_name^Gwiti"
         facing=ne
         shroud=yes
@@ -79,36 +39,30 @@
 
         [ai]
             aggression=1.0
-            caution=-0.4
+            caution=-0.2
             grouping=no
             leader_value=2
         [/ai]
 
-#ifdef HARD
-        recruit=Dwarvish Fighter,Dwarvish Guardsman,Dwarvish Thunderer,Dwarvish Ulfserker,Dwarvish Steelclad,Dwarvish Stalwart,Dwarvish Thunderguard
-#else
         recruit=Dwarvish Fighter,Dwarvish Guardsman,Dwarvish Thunderer,Dwarvish Ulfserker
-#endif
-        {GOLD 100 150 200}
-        {INCOME 0 10 20}
+        {TDH_GOLD 40 60 80 100}
+        {TDH_INCOME 0 10 20 30}
         user_team_name= _ "team_name^Dwarves"
         facing=sw
         {FLAG_VARIANT knalgan}
 
-#ifndef EASY
         {LOYAL_GUARD_UNIT 2 (Dwarvish Fighter) 12 17}
-        {LOYAL_GUARD_UNIT 2 (Dwarvish Fighter) 10 10}
-#endif
-
-#ifdef HARD
-        {LOYAL_GUARD_UNIT 2 (Dwarvish Steelclad) 14 9}
-        {LOYAL_GUARD_UNIT 2 (Dwarvish Steelclad) 1 13}
-#endif
+        {LOYAL_GUARD_UNIT 2 (Dwarvish Fighter) 11 10}
         {LOYAL_GUARD_UNIT 2 (Dwarvish Fighter) 10 20}
+        {LOYAL_GUARD_UNIT 2 (Dwarvish Fighter) 10 22}
         {LOYAL_GUARD_UNIT 2 (Dwarvish Fighter) 13 15}
+
         {LOYAL_GUARD_UNIT 2 (Dwarvish Guardsman) 4 20}
-        {LOYAL_GUARD_UNIT 2 (Dwarvish Thunderer) 7 13}
-        {LOYAL_GUARD_UNIT 2 (Dwarvish Guardsman) 2 15}
+        {LOYAL_GUARD_UNIT 2 (Dwarvish Guardsman) 8 16}
+        {LOYAL_GUARD_UNIT 2 (Dwarvish Guardsman) 4 12}
+
+        {LOYAL_GUARD_UNIT 2 (Dwarvish Fighter) 8 22}
+        {LOYAL_GUARD_UNIT 2 (Dwarvish Fighter) 6 20}
     [/side]
 
     [side]
@@ -121,17 +75,13 @@
         [ai]
             passive_leader=yes
             village_value=0
-            caution=4
-            aggression=0.8
+            caution=1.0
+            aggression=1.0
         [/ai]
 
-#ifdef EASY
-        recruit=Naga Fighter
-#else
-        recruit=Naga Fighter,Naga Warrior
-#endif
-        {GOLD 100 150 200}
-        {INCOME 0 10 20}
+        recruit=Naga Fighter,Naga Warrior,Naga Guard,Naga Dirkfang
+        {TDH_GOLD 40 80 120 160}
+        {TDH_INCOME 0 10 20 30}
         user_team_name= _ "team_name^Naga"
         facing=nw
         {FLAG_VARIANT6 ragged}
@@ -139,22 +89,35 @@
 
     [event]
         name=prestart
-        {CAPTURE_VILLAGE 2 10 20}
-        {CAPTURE_VILLAGE 2 13 15}
-        {CAPTURE_VILLAGE 2 12 17}
-        {CAPTURE_VILLAGE 2 2 15}
-        {CAPTURE_VILLAGE 2 7 13}
-        {CAPTURE_VILLAGE 2 7 10}
-        {CAPTURE_VILLAGE 2 14 9}
-        {CAPTURE_VILLAGE 2 1 13}
-
         [recall]
             id=Tanar
-            x,y=6,32
+            x,y=7,31
             facing=ne
         [/recall]
 
-        {VARIABLE sunken no}
+        [objectives]
+            [objective]
+                condition=win
+                description= _ "Further into the depths"
+            [/objective]
+            [objective]
+                condition=lose
+                description= _ "Death of Gwiti Ha’atel"
+            [/objective]
+            [objective]
+                condition=lose
+                description= _ "Death of Tanar"
+            [/objective]
+
+            [gold_carryover]
+                bonus=no
+                carryover_percentage=80
+            [/gold_carryover]
+
+            [note]
+                description= _ "Your castle will sink at the start of turn 4."
+            [/note]
+        [/objectives]
     [/event]
 
     [event]
@@ -167,14 +130,17 @@
             speaker="Gwiti Ha'atel"
             message= _ "That should keep the dwarves and humans away. Let’s see what else these caves contain."
         [/message]
+
+        {APPEND_MUSIC into_the_shadows.ogg}
     [/event]
 
     [event]
         name=turn 4
+
         {THUNDER (
             [terrain]
-                x=5,4-6,5-7
-                y=33,32,31
+                x=5,5-7,6,6-7
+                y=31,32,30,31
                 terrain=Ww
             [/terrain]
         )}
@@ -187,8 +153,22 @@
             speaker="Gwiti Ha'atel"
             message= _ "Maybe the midgets were running from the water... no matter, we can only move forward."
         [/message]
+    [/event]
 
-        {VARIABLE sunken yes}
+    [event]
+        name=side 3 turn refresh
+        first_time_only=no
+
+        {RANDOM 3,3,4}
+
+        [modify_unit]
+            [filter]
+                side=3
+            [/filter]
+            moves=$random
+        [/modify_unit]
+
+        {CLEAR_VARIABLE random}
     [/event]
 
     [event]
@@ -199,19 +179,30 @@
 
         [message]
             speaker=second_unit
-            message= _ "There is a stone with a glowing rune on it here, but the light is fading quickly."
+            message= _ "There is the stone with glowing runes on it here, but the light is fading quickly."
         [/message]
         [message]
             speaker=second_unit
-            message= _ "There is also a pile of gold. They won't be needing it anymore."
+            message= _ "There is also the pile of gold. They won’t be needing it anymore."
         [/message]
 
-        {RETRIEVE_GOLD 200}
+        {VARIABLE gold_amount 200}
+
+        [sound]
+            name=gold.ogg
+        [/sound]
+        [floating_text]
+            x=$x1
+            y=$y1
+            text= _ "+$gold_amount| gold"
+        [/floating_text]
+
+        {CLEAR_VARIABLE gold_amount}
     [/event]
 
 #define ISLAND_COORDINATES
-    x=11-17,17,18-25
-    y=1-5,6-7,1-11
+    x=11-17,16,17,18-26
+    y=1-5,6,6-7,1-11
 #enddef
 
     [event]
@@ -228,6 +219,30 @@
             speaker=Tanar
             message= _ "Aye! Kill the dwarves!"
         [/message]
+
+        [objectives]
+            [objective]
+                condition=win
+                description= _ "Ensure the safety of all heroes"
+            [/objective]
+            [objective]
+                condition=win
+                description= _ "Defeat all surrounding enemies"
+            [/objective]
+            [objective]
+                condition=lose
+                description= _ "Death of Gwiti Ha’atel"
+            [/objective]
+            [objective]
+                condition=lose
+                description= _ "Death of Tanar"
+            [/objective]
+
+            [gold_carryover]
+                bonus=no
+                carryover_percentage=80
+            [/gold_carryover]
+        [/objectives]
     [/event]
 
     [event]
@@ -255,18 +270,10 @@
                 [/have_unit]
             [/not]
             [then]
-                [message]
-                    speaker=Tanar
-                    message= _ "We have cleared the area, Lord."
-                [/message]
-                [message]
-                    speaker="Gwiti Ha'atel"
-                    message= _ "Block the entrances. We will be safe here for a while. Now I have to study the book."
-                [/message]
                 [endlevel]
                     result=victory
                     bonus=no
-                    {NEW_GOLD_CARRYOVER 60}
+                    {NEW_GOLD_CARRYOVER 80}
                 [/endlevel]
             [/then]
             [else]
@@ -275,6 +282,7 @@
             [/else]
         [/if]
     [/event]
+
     [event]
         name=die
         first_time_only=no
@@ -299,18 +307,10 @@
                 [/have_unit]
             [/not]
             [then]
-                [message]
-                    speaker=Tanar
-                    message= _ "We have cleared the area, Lord."
-                [/message]
-                [message]
-                    speaker="Gwiti Ha'atel"
-                    message= _ "Block the entrances. We will be safe here for a while. Now I have to study the book."
-                [/message]
                 [endlevel]
                     result=victory
                     bonus=no
-                    {NEW_GOLD_CARRYOVER 60}
+                    {NEW_GOLD_CARRYOVER 80}
                 [/endlevel]
             [/then]
         [/if]
@@ -318,7 +318,14 @@
 
     [event]
         name=victory
-        {CLEAR_VARIABLE sunken}
+        [message]
+            speaker=Tanar
+            message= _ "We have cleared the area, lord."
+        [/message]
+        [message]
+            speaker="Gwiti Ha'atel"
+            message= _ "Block the entrances. We will be safe here for awhile. Now I have to study the book."
+        [/message]
     [/event]
 
 #undef ISLAND_COORDINATES
@@ -366,9 +373,10 @@
 
         [store_locations]
             variable=newwater
-            terrain=Uu,Ur,Uu^Vu,Uu^Vud,Uh,Cud,Kud
+            terrain=Uu,Uu^Tf,Uu^Emf,Uue,Uue^Tf,Uue^Emf,Ur,Ur^Tf,Ur^Emf,Uu^Vu,Uu^Vud,Uh,Uh^Tf,Uh^Emf,Uhe,Uhe^Tf,Uhe^Emf,Cud,Kud
             [not]
-                x,y=5,33
+                x=5,5-7,6,6-7
+                y=31,32,30,31
             [/not]
             [filter_adjacent_location]
                 count=2-6
@@ -381,6 +389,18 @@
                 [variable]
                     name=newwater[$i].terrain
                     equals=Uh
+                    [or]
+                        equals=Uh^Tf
+                    [/or]
+                    [or]
+                        equals=Uh^Emf
+                    [/or]
+                    [or]
+                        equals=Uhe^Tf
+                    [/or]
+                    [or]
+                        equals=Uhe^Emf
+                    [/or]
                 [/variable]
                 [then]
                     [terrain]
@@ -415,15 +435,18 @@
             speaker=unit
             message= _ "My clan will avenge this betrayal!"
         [/message]
+
         [kill]
             id=Tanar
             fire_event=no
             animate=yes
         [/kill]
+
         [endlevel]
             result=defeat
         [/endlevel]
     [/event]
+
     [event]
         name=last breath
         [filter]
